--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -241,12 +241,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Потвърдено</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Вашият профил</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Вашият профил</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Грешка при задаване на профилна снимка</string>
   <string name="CreateProfileActivity_problem_setting_profile">Проблем при промяната на профила</string>
   <string name="CreateProfileActivity_profile_photo">Снимка на профила</string>
-  <string name="CreateProfileActivity_too_long">Твърде дълго</string>
-  <string name="CreateProfileActivity_profile_name">Име на профила</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Твърде дълго</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Име на профила</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Настройте профила си</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Профилите в Signal са криптирани от край до край, Signal никога не получава достъп до тази информация.</string>
   <!--CustomDefaultPreference-->
@@ -476,9 +476,9 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Версията на Google Play Services, която сте инсталирали не функционира правилно. Моля, преинсталирайте Google Play Services и опитайте пак.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_save">Запази</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Запази</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Профил</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Профил</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Оцени тази програма</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ако харесваш тази програма, отдели една секунда и ни помогни като ѝ дадеш оценка.</string>
@@ -934,10 +934,10 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal се нуждае от MMS настройки, за да може да достави медийни и групови съобщения през мрежата. Устройството ти не прави тази информация достъпна, което се случва понякога за заключени устройва и други ограничени конфигурации.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">За да изптратиш медийни и групови съобщения, избери \'ОК\' и нагласи изискваните настройки. MMS настройките на твоя мобилен оператор могат да бъдат намерени като потърсиш \'APN настройки\'. Нужно е да изпълниш тази стъпка само веднъж.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Промени по-късно</string>
-  <string name="profile_create_activity__finish">ЗАПАЗВАНЕ</string>
-  <string name="profile_create_activity__who_can_see_this_information">Кой може да види тази информация?</string>
-  <string name="profile_create_activity__your_name">Вашето име</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Промени по-късно</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ЗАПАЗВАНЕ</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Кой може да види тази информация?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Вашето име</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Споделена медия</string>
   <!--recipient_preferences-->
@@ -1331,7 +1331,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Регистрационното заключване предпазва Вашия телефонен номер от неоторизирани опити за регистрация. Тази услуга може да бъде деактивирана по всяко време от секцията за лично пространсто в Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Регистрационно заключване</string>
   <string name="RegistrationLockDialog_enable">Активиране</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">ПИН-ът за регистрационно заключване трябва да бъде поне 4 цифри.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">ПИН-ът за регистрационно заключване трябва да бъде поне 4 цифри.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Двата ПИН-а, които въведохте не съвпадат.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Неуспшено свързване с услугата</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Деактивиране на ПИН-а за регистрационно заключване?</string>
