--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -282,12 +282,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Potvrđeno</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Informacije o Vašem profilu</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Informacije o Vašem profilu</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Greška prilikom podešavanja fotografije profila</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problem kod podešavanja profila</string>
   <string name="CreateProfileActivity_profile_photo">Fotografija profila</string>
-  <string name="CreateProfileActivity_too_long">Predugo</string>
-  <string name="CreateProfileActivity_profile_name">Ime profila</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Predugo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Ime profila</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Podesite Vaš profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profili šifrirani su i Signal ni u jednom trenutku nema pristupa toj informaciji.</string>
   <string name="CreateProfileActivity_set_avatar_description">Postavi sliku profila</string>
@@ -570,16 +570,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Google Play Services koje ste instalirali ne rade kako treba. Molimo iznova instalirajte Google Play Services i pokušajte ponovo.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Ime profila</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Ime na Vašem profilu mogu vidjeti Vaši kontakti, kao i drugi korisnici ili grupe kad Vi započnete komunikaciju s njima ili prihvatite njihov zahtjev za komunikaciju s Vama.</string>
-  <string name="ProfileEditNameFragment_save">Pohrani</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Ime profila</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Ime na Vašem profilu mogu vidjeti Vaši kontakti, kao i drugi korisnici ili grupe kad Vi započnete komunikaciju s njima ili prihvatite njihov zahtjev za komunikaciju s Vama.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Pohrani</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Ime profila</string>
-  <string name="ProfileEditOverviewFragment_username">Korisničko ime</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Zadajte ime profila</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Kreirajte korisničko ime</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Vaš Signal profil mogu vidjeti Vaši kontakti, kao i drugi korisnici ili grupe kad Vi započnete komunikaciju s njima ili prihvatite njihov zahtjev za komunikaciju s Vama. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Za više informacija pritisnite ovdje</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Ime profila</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Korisničko ime</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Zadajte ime profila</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Kreirajte korisničko ime</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Vaš Signal profil mogu vidjeti Vaši kontakti, kao i drugi korisnici ili grupe kad Vi započnete komunikaciju s njima ili prihvatite njihov zahtjev za komunikaciju s Vama. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Za više informacija pritisnite ovdje</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Ocijenite ovu aplikaciju</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ako sa zadovoljstvom koristite ovu aplikaciju, molimo izdvojite trenutak da nam pomognete tako što ćete je ocijeniti.</string>
@@ -1085,10 +1085,10 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal zahtijeva MMS postavke da bi dostavio multimedijalne i grupne poruke putem Vaše bežične konekcije. Vaš uređaj nije omogućio pristup ovim informacijama, što se povremeno dešava na zaključanim uređajima i u slučaju ograničavajućih podešavanja.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Da biste slali multimedijalne i grupne poruke, pritisnite \'Uredu\' i popunite tražene postavke. MMS postavke za Vašeg operatera obično se mogu saznati tražeći \'APN Vašeg operatera\'. Ovo je potrebno učiniti samo jednom.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Kreiraj kasnije</string>
-  <string name="profile_create_activity__finish">ZAVRŠI</string>
-  <string name="profile_create_activity__who_can_see_this_information">Ko može vidjeti ovu informaciju?</string>
-  <string name="profile_create_activity__your_name">Vaše ime</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Kreiraj kasnije</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ZAVRŠI</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Ko može vidjeti ovu informaciju?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Vaše ime</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Razmijenjene datoteke</string>
   <!--recipient_preferences-->
@@ -1521,7 +1521,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Zaključavanjem registracije Vaš telefonski broj štiti se od neautorizovanih pokušaja registracije. Ova opcija može se isključiti kad god poželite u Signalovim podešavanjima privatnosti</string>
   <string name="RegistrationLockDialog_registration_lock">Zaključavanje registracije</string>
   <string name="RegistrationLockDialog_enable">Aktiviraj</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN za zaključavanje registracije mora sadržavati najmanje 4 cifre.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN za zaključavanje registracije mora sadržavati najmanje 4 cifre.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Dva PIN-a koje ste unijeli nisu podudarni.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Greška pri povezivanju sa uslugom</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Onemogućiti PIN za zaključavanje registracije?</string>
