--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -25,7 +25,7 @@
   </plurals>
   <string name="ApplicationPreferencesActivity_delete">Slet</string>
   <string name="ApplicationPreferencesActivity_disable_passphrase">Deaktivér kodeord?</string>
-  <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Dette vil permanent låse op for Signal og besked notifikationer</string>
+  <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Dette låser permanent op for Signal og besked notifikationer</string>
   <string name="ApplicationPreferencesActivity_disable">Deaktivér</string>
   <string name="ApplicationPreferencesActivity_unregistering">Afmeld</string>
   <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Afregistrerer fra Signal beskeder og opkald…</string>
@@ -38,8 +38,8 @@
   <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Tap for at gøre Signal til din standard SMS app</string>
   <string name="ApplicationPreferencesActivity_on">tændt</string>
   <string name="ApplicationPreferencesActivity_On">Tændt</string>
-  <string name="ApplicationPreferencesActivity_off">slukket</string>
-  <string name="ApplicationPreferencesActivity_Off">Slukket</string>
+  <string name="ApplicationPreferencesActivity_off">deaktiveret</string>
+  <string name="ApplicationPreferencesActivity_Off">Deaktiveret</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">Skærmlås %1$s, Registreringskode %2$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">Tema %1$s, Sprog %2$s</string>
@@ -135,10 +135,10 @@
   <string name="ConversationItem_error_not_delivered">Fejl ved afsendelse, tap for detaljer</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Udvekslingsnøgle er modtaget. Tap for at fortsætte</string>
   <string name="ConversationItem_group_action_left">%1$s har forladt gruppen</string>
-  <string name="ConversationItem_click_to_approve_unencrypted">Fejl ved afsendelse, tap for at sende usikret</string>
+  <string name="ConversationItem_click_to_approve_unencrypted">Fejl ved afsendelse, tap for at sende standard besked</string>
   <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Godkend ukrypteret SMS?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Godkend ukrypteret MMS?</string>
-  <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">Denne besked vil <b>ikke</b> blive krypteret, da modtageren ikke længere bruger Signal.\n\nSend usikret besked?</string>
+  <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">Denne besked vil <b>ikke</b> blive krypteret, da modtageren ikke længere bruger Signal.\n\nSend standard besked?</string>
   <string name="ConversationItem_unable_to_open_media">Kan ikke finde en app, der kan åbne mediet</string>
   <string name="ConversationItem_copied_text">Kopieret %s</string>
   <string name="ConversationItem_from_s">fra %s</string>
@@ -163,8 +163,8 @@
   <string name="ConversationActivity_this_device_does_not_appear_to_support_dial_actions">Enheden understøtter ikke initieret opkald</string>
   <string name="ConversationActivity_leave_group">Forlad gruppe?</string>
   <string name="ConversationActivity_are_you_sure_you_want_to_leave_this_group">Er du sikker, du vil forlade gruppen?</string>
-  <string name="ConversationActivity_transport_insecure_sms">Usikret SMS</string>
-  <string name="ConversationActivity_transport_insecure_mms">Usikret MMS</string>
+  <string name="ConversationActivity_transport_insecure_sms">Ukrypteret SMS</string>
+  <string name="ConversationActivity_transport_insecure_mms">Ukrypteret MMS</string>
   <string name="ConversationActivity_transport_signal">Signal</string>
   <string name="ConversationActivity_lets_switch_to_signal">Lad os bruge Signal %1$s?</string>
   <string name="ConversationActivity_error_leaving_group">Fejl ved forsøg på at forlade gruppen</string>
@@ -239,6 +239,7 @@
   <string name="ConversationFragment_failed_to_open_message">Fejl ved åbning af besked</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Du kan swipe til højre på enhver besked, for at svare hurtigt</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Du kan swipe til venstre på enhver besked, for at svare hurtigt</string>
+  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Udgående mediebeskeder der kun vises én gang, bliver automatisk fjernet efter de er sendt</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Beskeden er allerede læst</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Ingen browser installeret på enheden</string>
@@ -270,12 +271,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificeret</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Din profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Din profil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Fejl opstået ved oprettelse af profilbilledet</string>
   <string name="CreateProfileActivity_problem_setting_profile">Fejl opstod ved oprettelse af profil</string>
   <string name="CreateProfileActivity_profile_photo">Profilbillede</string>
-  <string name="CreateProfileActivity_too_long">For langt</string>
-  <string name="CreateProfileActivity_profile_name">Profil navn</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">For langt</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profil navn</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Konfigurer din profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profiler er krypteret begge veje, og Signals services har ingen adgang til informationen</string>
   <string name="CreateProfileActivity_set_avatar_description">Vælg avatar</string>
@@ -349,7 +350,7 @@
   <!--GiphyActivity-->
   <string name="GiphyActivity_error_while_retrieving_full_resolution_gif">Fejl opstod ved hentning af GIF i fuld opløsning</string>
   <!--GiphyFragmentPageAdapter-->
-  <string name="GiphyFragmentPagerAdapter_gifs">GIF\'er</string>
+  <string name="GiphyFragmentPagerAdapter_gifs">GIF\'s</string>
   <string name="GiphyFragmentPagerAdapter_stickers">Animationer</string>
   <!--GroupCreateActivity-->
   <string name="GroupCreateActivity_actionbar_title">Opret ny gruppe</string>
@@ -433,7 +434,7 @@
   <string name="MediaOverviewActivity_Sort_by">Sortér efter</string>
   <string name="MediaOverviewActivity_Newest">Nyeste</string>
   <string name="MediaOverviewActivity_Oldest">Ældste</string>
-  <string name="MediaOverviewActivity_Storage_used">Lager brugt</string>
+  <string name="MediaOverviewActivity_Storage_used">Størrelse</string>
   <string name="MediaOverviewActivity_All_storage_use">Lager brugt samlet</string>
   <string name="MediaOverviewActivity_Grid_view_description">Gittervisning</string>
   <string name="MediaOverviewActivity_List_view_description">Listevisning</string>
@@ -529,7 +530,7 @@
   <string name="DeviceProvisioningActivity_content_progress_network_error">Netværksfejl</string>
   <string name="DeviceProvisioningActivity_content_progress_key_error">Ugyldig QR-kode</string>
   <string name="DeviceProvisioningActivity_sorry_you_have_too_many_devices_linked_already">Ups. Du har allerede for mange enheder tilsluttet, prøv at fjerne én</string>
-  <string name="DeviceActivity_sorry_this_is_not_a_valid_device_link_qr_code">Beklager. Dette er ikke en gyldig QR-kode til at forbinde enheder</string>
+  <string name="DeviceActivity_sorry_this_is_not_a_valid_device_link_qr_code">Beklager - QR-koden kan ikke bruges til at forbinde enheder</string>
   <string name="DeviceProvisioningActivity_link_a_signal_device">Tilføj en Signal enhed?</string>
   <string name="DeviceProvisioningActivity_it_looks_like_youre_trying_to_link_a_signal_device_using_a_3rd_party_scanner">Det ser ud som om du forsøger at tilføje en Signal enhed via en 3 parts skanner. Af sikkerhedshensyn bør du skanne koden igen som findes i Signal app\'en</string>
   <string name="DeviceActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code">Signal kræver tilladelse til at tilgå dit kamera, for at kunne skanne en QR-kode, hvilket det er blevet nægtet. Gå venligst via appens menu til Indstillinger, vælg \"Tilladelser\" og tilvælg \"Kamera\"</string>
@@ -552,16 +553,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Din installerede version af Google Play tjenester virker ikke korrekt. Geninstallér venligst Google Play tjenester og prøv igen</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Profilnavn</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Dit profilnavn kan ses af dine kontakter, andre brugere og grupper, når du opretter en samtale eller accepterer en invitation til at deltage i en</string>
-  <string name="ProfileEditNameFragment_save">Gem</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profilnavn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Dit profilnavn kan ses af dine kontakter, andre brugere og grupper, når du opretter en samtale eller accepterer en invitation til at deltage i en</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Gem</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Profilnavn</string>
-  <string name="ProfileEditOverviewFragment_username">Brugernavn</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Opret et profilnavn</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Opret et brugernavn</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Din Signal profil kan ses af dine kontakter, andre brugere og grupper, når du opretter en samtale eller accepterer en invitation til at deltage i en. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tap her for at læse mere</a></string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profilnavn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Brugernavn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Opret et profilnavn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Opret et brugernavn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Din Signal profil kan ses af dine kontakter, andre brugere og grupper, når du opretter en samtale eller accepterer en invitation til at deltage i en. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tap her for at læse mere</a></string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bedøm app\'en</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Hvis du kan lide at bruge app\'en, så hjælp os venligst ved at bedømme den</string>
@@ -802,7 +803,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="MessageNotifier_view_once_video">Se video én gang</string>
   <string name="MessageNotifier_reply">Svar</string>
   <string name="MessageNotifier_signal_message">Signalbesked</string>
-  <string name="MessageNotifier_unsecured_sms">Usikret SMS</string>
+  <string name="MessageNotifier_unsecured_sms">Standard SMS</string>
   <string name="MessageNotifier_you_may_have_new_messages">Du har nye beskeder</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Åbn Signal for at tjekke seneste notifikationer</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
@@ -913,8 +914,8 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="contact_selection_list_fragment__show_contacts">Vis kontakter</string>
   <!--conversation_activity-->
   <string name="conversation_activity__type_message_push">Signalbesked</string>
-  <string name="conversation_activity__type_message_sms_insecure">Usikret SMS</string>
-  <string name="conversation_activity__type_message_mms_insecure">Usikret MMS</string>
+  <string name="conversation_activity__type_message_sms_insecure">Standard SMS</string>
+  <string name="conversation_activity__type_message_mms_insecure">Standard MMS</string>
   <string name="conversation_activity__from_sim_name">Fra %1$s</string>
   <string name="conversation_activity__sim_n">SIM %1$d</string>
   <string name="conversation_activity__send">Send</string>
@@ -953,7 +954,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Scroll til bunden</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Loader lande…</string>
+  <string name="country_selection_fragment__loading_countries">Indlæser lande…</string>
   <string name="country_selection_fragment__search">Søg</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Skan QR-koden der vises på enheden, for at forbinde</string>
@@ -1009,7 +1010,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
     <item quantity="other">%d mere</item>
   </plurals>
   <!--giphy_activity-->
-  <string name="giphy_activity_toolbar__search_gifs_and_stickers">Søg GIF\'er og animationer</string>
+  <string name="giphy_activity_toolbar__search_gifs_and_stickers">Søg GIF\'s og animationer</string>
   <!--giphy_fragment-->
   <string name="giphy_fragment__nothing_found">Fandt ingenting</string>
   <!--log_submit_activity-->
@@ -1064,10 +1065,10 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal kræver adgang til MMS-indstillinger for at levere medie og gruppebeskeder gennem din teleudbyder. Din enhed gør ikke denne information tilgængelig, hvilket nogle gange er tilfældet for låste enheder og andre begrænsende opsætninger</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">For at sende multimedie- og gruppebeskeder, tap \"OK\" og sæt de nødvendige indstillinger. MMS indstillingerne for din teleoperatør kan ofte findes ved at søge på \"din operatørs APN\". Dette skal kun gøres én gang</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Senere</string>
-  <string name="profile_create_activity__finish">AFSLUT</string>
-  <string name="profile_create_activity__who_can_see_this_information">Hvem kan se denne information?</string>
-  <string name="profile_create_activity__your_name">Dit navn</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Senere</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">AFSLUT</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Hvem kan se denne information?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Dit navn</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Delt medie</string>
   <!--recipient_preferences-->
@@ -1269,7 +1270,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="preferences_notifications__show">Vis</string>
   <string name="preferences_notifications__calls">Opkald</string>
   <string name="preferences_notifications__ringtone">Ringetone</string>
-  <string name="preferences_chats__show_invitation_prompts">Vis invitationsprompt</string>
+  <string name="preferences_chats__show_invitation_prompts">Invitationsprompt</string>
   <string name="preferences_chats__display_invitation_prompts_for_contacts_without_signal">Vis invitationsprompt for kontakter uden Signal</string>
   <string name="preferences_chats__message_text_size">Skriftstørrelse på beskeder</string>
   <string name="preferences_events__contact_joined_signal">Kontakt er nu tilmeldt Signal</string>
@@ -1302,7 +1303,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Gem vedhæftet fil</string>
   <!--conversation_expiring_off-->
-  <string name="conversation_expiring_off__disappearing_messages">Beskeder med tidsudløb</string>
+  <string name="conversation_expiring_off__disappearing_messages">Besked med tidsudløb</string>
   <!--conversation_expiring_on-->
   <string name="menu_conversation_expiring_on__messages_expiring">Beskeder der udløber</string>
   <!--conversation_insecure-->
@@ -1499,7 +1500,7 @@ Der er %d dage tilbage</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Registreringslås hjælper dig med at beskytte dit telefonnummer fra uautoriserede registreringsforsøg. Denne funktion kan til enhver tid slås fra under privatlivsindstillinger</string>
   <string name="RegistrationLockDialog_registration_lock">Registreringslås</string>
   <string name="RegistrationLockDialog_enable">Aktivér</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registreringskoden skal være på mindst 4 cifre</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registreringskoden skal være på mindst 4 cifre</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">De to PIN-koder du har indtastet er forskellige</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Fejl ved oprettelse af forbindelse til service</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Slå registreringskode fra?</string>
