--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -270,12 +270,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verifiziert</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Deine Profilinformationen</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Deine Profilinformationen</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Fehler beim Festlegen des Profilfotos</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problem beim Festlegen des Profils</string>
   <string name="CreateProfileActivity_profile_photo">Profilfoto</string>
-  <string name="CreateProfileActivity_too_long">Zu lang</string>
-  <string name="CreateProfileActivity_profile_name">Profilname</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Zu lang</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profilname</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Dein Profil einrichten</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-Profile sind Ende-zu-Ende-verschlüsselt. Der Signal-Dienst hat daher niemals Zugriff auf diese Informationen.</string>
   <string name="CreateProfileActivity_set_avatar_description">Avatar festlegen</string>
@@ -550,16 +550,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Die derzeit installierte Version der Google-Play-Dienste funktioniert nicht korrekt. Bitte installiere die Google-Play-Dienste neu und versuche es noch einmal.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Profilname</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Dein Profilname kann von deinen Kontakten und anderen Nutzern oder Gruppen gesehen werden, sobald du eine Unterhaltung beginnst oder einer Unterhaltungsanfrage zustimmst.</string>
-  <string name="ProfileEditNameFragment_save">Speichern</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profilname</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Dein Profilname kann von deinen Kontakten und anderen Nutzern oder Gruppen gesehen werden, sobald du eine Unterhaltung beginnst oder einer Unterhaltungsanfrage zustimmst.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Speichern</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Profilname</string>
-  <string name="ProfileEditOverviewFragment_username">Benutzername</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Erstelle einen Profilnamen</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Erstelle einen Benutzernamen</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Dein Signal-Profil kann von deinen Kontakten und anderen Nutzern oder Gruppen gesehen werden, sobald du eine Unterhaltung beginnst oder einer Unterhaltungsanfrage zustimmst. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Hier antippen für mehr Informationen</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profilname</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Benutzername</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Erstelle einen Profilnamen</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Erstelle einen Benutzernamen</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Dein Signal-Profil kann von deinen Kontakten und anderen Nutzern oder Gruppen gesehen werden, sobald du eine Unterhaltung beginnst oder einer Unterhaltungsanfrage zustimmst. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Hier antippen für mehr Informationen</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bewerte diese App</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Hilf uns durch deine Bewertung, falls dir die App gefällt.</string>
@@ -1054,10 +1054,10 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal benötigt MMS-Einstellungen, um Nachrichten mit Medieninhalten und Gruppennachrichten über deinen Mobilfunkanbieter zu versenden. Dein Gerät stellt diese Informationen nicht zur Verfügung, was gelegentlich bei gesperrten oder anderweitig restriktiv konfigurierten Geräten der Fall ist.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Zum Versenden von Nachrichten mit Medieninhalten und Gruppennachrichten bitte »OK« antippen und die geforderten Einstellungen vervollständigen. Die MMS-Einstellungen deines Mobilfunkanbieters können normalerweise durch eine Internetsuche nach dem »APN« des Anbieters gefunden werden.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Später festlegen</string>
-  <string name="profile_create_activity__finish">ABSCHLIESSEN</string>
-  <string name="profile_create_activity__who_can_see_this_information">Wer kann diese Informationen sehen?</string>
-  <string name="profile_create_activity__your_name">Dein Name</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Später festlegen</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ABSCHLIESSEN</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Wer kann diese Informationen sehen?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Dein Name</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Geteilte Medieninhalte</string>
   <!--recipient_preferences-->
@@ -1488,7 +1488,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Die Registrierungssperre hilft, deine Rufnummer vor unautorisierten Registrierungsversuchen zu schützen. Diese Funktion kann jederzeit in den Datenschutzeinstellungen von Signal deaktiviert werden.</string>
   <string name="RegistrationLockDialog_registration_lock">Registrierungssperre</string>
   <string name="RegistrationLockDialog_enable">Aktivieren</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Die PIN für die Registrierungssperre muss aus mindestens 4 Ziffern bestehen.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Die PIN für die Registrierungssperre muss aus mindestens 4 Ziffern bestehen.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Die beiden eingegebenen PINs stimmen nicht überein.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Fehler beim Verbinden mit Dienst</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Registrierungssperre deaktivieren?</string>
