--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -238,6 +238,8 @@
   <string name="ConversationFragment_failed_to_open_message">Malsukceso malfermi la mesaĝon</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Vi povas ŝovumi dekstren iun mesaĝon por rapide respondi</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Vi povas ŝovumi maldekstren iun mesaĝon por rapide respondi</string>
+  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Nurunufoje videblaj elirantaj aŭdvidaĵoj estas aŭtomate forigitaj post ilia sendado</string>
+  <string name="ConversationFragment_you_already_viewed_this_message">Vi jam vidis tiun mesaĝon</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Ne estas foliumilo instalata sur via aparato.</string>
   <!--ConversationListFragment-->
@@ -268,12 +270,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Konfirmita</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Via profila informo</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Via profila informo</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Eraro dum agordo de profila foto</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problemo dum agordo de profilo</string>
   <string name="CreateProfileActivity_profile_photo">Profila foto</string>
-  <string name="CreateProfileActivity_too_long">Tro longa</string>
-  <string name="CreateProfileActivity_profile_name">Profila nomo</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Tro longa</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profila nomo</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Agordi vian profilon</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profiloj estas tutvojaj ĉifritaj, kaj la Signal-servo neniam povas aliri al tiu informo.</string>
   <string name="CreateProfileActivity_set_avatar_description">Difini la avataron</string>
@@ -550,16 +552,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La instalita versio de la Google-servoj „Play“ ne bone funkcias. Bv. re-instali „Google Play Services“, kaj provi denove.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Profila nomo</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Via profila nomo videblas de viaj kontaktoj kaj aliaj uzantoj aŭ grupoj, kiam vi komencas interparolon aŭ akceptas peton por interparoli.</string>
-  <string name="ProfileEditNameFragment_save">Konservi</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profila nomo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Via profila nomo videblas de viaj kontaktoj kaj aliaj uzantoj aŭ grupoj, kiam vi komencas interparolon aŭ akceptas peton por interparoli.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Konservi</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profilo</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Profila nomo</string>
-  <string name="ProfileEditOverviewFragment_username">Uzantnomo</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Krei profilnomon</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Krei uzantnomon</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Via Signal-profilo videblas de viaj kontaktoj kaj aliaj uzantoj aŭ grupoj, kiam vi komencas interparolon aŭ akceptas peton por interparoli. <a href="https://support.signal.org/hc/articles/360007459591-Signal-Profiles">Tuŝetu tie por scii pli</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profilo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profila nomo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Uzantnomo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Krei profilnomon</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Krei uzantnomon</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Via Signal-profilo videblas de viaj kontaktoj kaj aliaj uzantoj aŭ grupoj, kiam vi komencas interparolon aŭ akceptas peton por interparoli. <a href="https://support.signal.org/hc/articles/360007459591-Signal-Profiles">Tuŝetu tie por scii pli</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Pritaksi tiun aplikaĵon</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se vi ŝatas uzi tiun aplikaĵon, bv. helpi nin per via pritakso.</string>
@@ -640,6 +642,7 @@
   <string name="RegistrationActivity_call">Alvoko</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_view_photo">Vidi foton</string>
+  <string name="RevealableMessageView_view_video">Vidi videaĵon</string>
   <string name="RevealableMessageView_viewed">Vidita</string>
   <string name="RevealableMessageView_media">Aŭdvidaĵo</string>
   <!--ScribbleActivity-->
@@ -702,6 +705,9 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="ThreadRecord_missed_call">Maltrafita alvoko</string>
   <string name="ThreadRecord_media_message">Aŭdvida mesaĝo</string>
   <string name="ThreadRecord_sticker">Glumarko</string>
+  <string name="ThreadRecord_view_once_photo">Nurunufoje videbla foto</string>
+  <string name="ThreadRecord_view_once_video">Nurunufoje videbla videaĵo</string>
+  <string name="ThreadRecord_view_once_media">Nurunufoje videbla aŭdvidaĵo</string>
   <string name="ThreadRecord_s_is_on_signal">%s estas ĉe Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Memviŝontaj mesaĝoj malŝaltita</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Daŭro de memviŝontaj mesaĝoj agordita je %s</string>
@@ -792,6 +798,8 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="MessageNotifier_mark_read">Marki legita</string>
   <string name="MessageNotifier_media_message">Aŭdvida mesaĝo</string>
   <string name="MessageNotifier_sticker">Glumarko</string>
+  <string name="MessageNotifier_view_once_photo">Nurunufoje videbla foto</string>
+  <string name="MessageNotifier_view_once_video">Nurunufoje videbla videaĵo</string>
   <string name="MessageNotifier_reply">Respondi</string>
   <string name="MessageNotifier_signal_message">Signal-mesaĝo</string>
   <string name="MessageNotifier_unsecured_sms">Nesekura SMS</string>
@@ -937,6 +945,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="QuoteView_audio">Sonaĵo</string>
   <string name="QuoteView_video">Videaĵo</string>
   <string name="QuoteView_photo">Foto</string>
+  <string name="QuoteView_view_once_media">Nurunufoje videbla aŭdvidaĵo</string>
   <string name="QuoteView_sticker">Glumarko</string>
   <string name="QuoteView_document">Dokumento</string>
   <string name="QuoteView_you">Vi</string>
@@ -1055,10 +1064,10 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal bezonas agordojn pri MMS por liveri aŭdvidajn kaj grupajn mesaĝojn per via sendrata provizanto. Via aparato ne disponigas tiun informon: tio okazas ĉe ŝlositaj aparatoj kaj aliaj limigaj aparatoj.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Por sendi aŭdvidajn kaj grupajn mesaĝojn, tuŝeto „Bone“, kaj aldoni la bezonatajn agordojn. La MMS-agordo por via provizanto kutime troviĝas per serĉo pri „via provizanto APN“ („APN“ estas „nomo de la retkaptejo“ angle). Vi bezonas fari tion nur unufoje.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Agordi poste</string>
-  <string name="profile_create_activity__finish">FINI</string>
-  <string name="profile_create_activity__who_can_see_this_information">Kiu povas vidi tiun informon?</string>
-  <string name="profile_create_activity__your_name">Via nomo</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Agordi poste</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">FINI</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kiu povas vidi tiun informon?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Via nomo</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Aŭdvidaĵoj kunhavigitaj</string>
   <!--recipient_preferences-->
@@ -1489,7 +1498,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Bloko de registriĝo helpas protekti vian telefonnumeron kontraŭ nerajtigita provo de registriĝo. Tio povas estas malŝaltita en viaj Signal-agordoj pri privateco</string>
   <string name="RegistrationLockDialog_registration_lock">Bloko de registriĝo</string>
   <string name="RegistrationLockDialog_enable">Ŝalti</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">La PIN de bloko de registriĝo enhavu almenaŭ 4 nombroj.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">La PIN de bloko de registriĝo enhavu almenaŭ 4 nombroj.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">La du PIN, kiujn vi entajpis, ne kongruas.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Eraro dum konekto al servo</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Ĉu malŝalti la PIN de bloko de registriĝo?</string>
