--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -91,7 +91,7 @@
   <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Puedes compartir con un máximo de %d chats.</string>
   <string name="CameraContacts_select_signal_recipients">Selecciona contactos de Signal</string>
   <string name="CameraContacts_no_signal_contacts">No hay contactos de Signal</string>
-  <string name="CameraContacts_you_can_only_use_the_camera_button">Sólo puedes usar el botón de ma cámara para enviar fotos a contactos en Signal.</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Sólo puedes usar el botón de la cámara para enviar fotos a contactos en Signal.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">¿No encuentras a quien buscas?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Invita a un contacto a usar Signal</string>
   <string name="CameraContacts__menu_search">Buscar</string>
@@ -270,14 +270,14 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificado</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Información de perfil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Información de perfil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Fallo al establecer la foto de perfil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problema al crear el perfil</string>
   <string name="CreateProfileActivity_profile_photo">Foto de perfil</string>
-  <string name="CreateProfileActivity_too_long">Demasiado largo</string>
-  <string name="CreateProfileActivity_profile_name">Nombre de perfil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Demasiado largo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nombre de perfil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Completa tu perfil</string>
-  <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Los perfiles de Signal están cifrados de punto a punto por lo que el servidor de Signal no tiene acceso a ningún dato.</string>
+  <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Los perfiles de Signal están cifrados de extremo a extremo por lo que el servidor de Signal no tiene acceso a ningún dato.</string>
   <string name="CreateProfileActivity_set_avatar_description">Configurar avatar de perfil</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Usar personalizado: %s</string>
@@ -552,16 +552,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La versión de Google Play Services que has instalado no funciona correctamente. Por favor, reinstala Google Play Services e inténtalo de nuevo.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Nombre de perfil</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Tu nombre de perfil puede ser visto por tus contactos y por otros usuarios o grupos cuando inicias un chat o aceptas una solicitud de chat.</string>
-  <string name="ProfileEditNameFragment_save">Guardar</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nombre de perfil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Tu nombre de perfil puede ser visto por tus contactos y por otros usuarios o grupos cuando inicias un chat o aceptas una solicitud de chat.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Guardar</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Perfil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Nombre de perfil</string>
-  <string name="ProfileEditOverviewFragment_username">Nombre de usuario</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Crear un nombre de perfil</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Crear un nombre de usuario</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Tu perfil de Signal puede ser visto por tus contactos y cualquier otro usuario de Signal o grupos cuando inicias un chat o aceptas una solicitud de chat. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Toca para saber más</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Perfil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nombre de perfil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nombre de usuario</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Crear un nombre de perfil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Crear un nombre de usuario</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Tu perfil de Signal puede ser visto por tus contactos y cualquier otro usuario de Signal o grupos cuando inicias un chat o aceptas una solicitud de chat. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Toca para saber más</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Valora esta aplicación</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Si disfrutas usando esta aplicación, por favor, tómate un momento para ayudarnos valorándola.</string>
@@ -612,7 +612,7 @@ número de teléfono
 (%s) no es válido.
 </string>
   <string name="RegistrationActivity_missing_google_play_services">Servicios de Google Play no instalados</string>
-  <string name="RegistrationActivity_this_device_is_missing_google_play_services">Este dispositivo no tiene los Servicios de Google Play instalados. Aún así puedes usar Signal, pero esta configuración puede resultar en un rendimiento reducido.\n\nSi no eres un usuario avanzado, no estás ejecutando una ROM modificada de Android, o crees que estás viendo esto indebidamente por favor, contacta con support@signal.org para obtener ayuda.</string>
+  <string name="RegistrationActivity_this_device_is_missing_google_play_services">Este dispositivo no tiene los Servicios de Google Play instalados. Aún así puedes usar Signal, pero esta configuración puede resultar en un bajo rendimiento o fiabilidad.\n\nSi no eres un usuario avanzado, no estás ejecutando una ROM cocinada de Android, o crees que estás viendo esto indebidamente por favor, contacta con support@signal.org para solución de problemas.</string>
   <string name="RegistrationActivity_i_understand">Entiendo</string>
   <string name="RegistrationActivity_play_services_error">Fallo en «Play Services»</string>
   <string name="RegistrationActivity_google_play_services_is_updating_or_unavailable">Google Play Services se está actualizando o está temporalmente suspendido. Por favor, inténtalo de nuevo.</string>
@@ -782,7 +782,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="MediaPreviewActivity_you">Tú</string>
   <string name="MediaPreviewActivity_unssuported_media_type">Formato de contenido incompatible</string>
   <string name="MediaPreviewActivity_draft">Borrador</string>
-  <string name="MediaPreviewActivity_signal_needs_the_storage_permission_in_order_to_write_to_external_storage_but_it_has_been_permanently_denied">Signal necesita acceso al almacenamiento del teléfono para guardar adjuntos si éste es externo.Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Almacenamiento».</string>
+  <string name="MediaPreviewActivity_signal_needs_the_storage_permission_in_order_to_write_to_external_storage_but_it_has_been_permanently_denied">Signal necesita acceso al almacenamiento del teléfono para guardar adjuntos si éste es externo. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Almacenamiento».</string>
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">No se puede guardar en una unidad de almacenamiento externo si Signal no tiene acceso</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">¿Eliminar mensaje?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Este mensaje se eliminará permanentemente.</string>
@@ -792,9 +792,9 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="MessageNotifier_most_recent_from_s">Más recientes desde: %1$s</string>
   <string name="MessageNotifier_locked_message">Mensaje cerrado</string>
   <string name="MessageNotifier_media_message_with_text">Mensaje multimedia: %s</string>
-  <string name="MessageNotifier_message_delivery_failed">Fallo al entregar el mensaje.</string>
+  <string name="MessageNotifier_message_delivery_failed">Entrega de mensaje fallida.</string>
   <string name="MessageNotifier_failed_to_deliver_message">Fallo al entregar mensaje.</string>
-  <string name="MessageNotifier_error_delivering_message">Fallo al entregar el mensaje.</string>
+  <string name="MessageNotifier_error_delivering_message">Error entregando mensaje.</string>
   <string name="MessageNotifier_mark_all_as_read">Marcar todos como leídos</string>
   <string name="MessageNotifier_mark_read">Marcar como leído</string>
   <string name="MessageNotifier_media_message">Mensaje multimedia</string>
@@ -1065,10 +1065,10 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal necesita una configuración de MMS válida para enviar los mensajes multimedia y de grupo a través del proveedor móvil. Tu dispositivo no proporciona esta información, algo que ocasionalmente ocurre con dispositivos bloqueados y otras configuraciones restrictivas.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Para enviar mensajes multimedia y de grupo, toca «Aceptar» y completa las configuraciones solicitadas. Las configuraciones de MMS para tu proveedor generalmente se pueden localizar buscando por «APN de proveedor». Sólo necesitarás hacer esto una vez.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Completar más tarde</string>
-  <string name="profile_create_activity__finish">FINALIZADO</string>
-  <string name="profile_create_activity__who_can_see_this_information">¿Quién puede ver esta información?</string>
-  <string name="profile_create_activity__your_name">Tu nombre</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Completar más tarde</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">FINALIZADO</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">¿Quién puede ver esta información?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Tu nombre</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Archivos multimedia compartidos</string>
   <!--recipient_preferences-->
@@ -1397,11 +1397,11 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Estadísticas</string>
   <string name="InsightsDashboardFragment__title">Estadísticas</string>
-  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">El protocolo de Signal ha cifrado automáticamente %1$d%% de tus mensajes enviados en los últimos %2$d días. Chats entre usuarios de Signal siempre están cifrados.</string>
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">El protocolo de Signal ha cifrado automáticamente %1$d%% de tus mensajes enviados en los últimos %2$d días. Chats entre usuarios de Signal siempre están cifrados de extremo a extremo.</string>
   <string name="InsightsDashboardFragment__boost_your_signal">Mejora con Signal</string>
   <string name="InsightsDashboardFragment__not_enough_data">No hay datos suficientes</string>
   <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">Este porcentaje se calcula con los mensajes enviados durante los últimos %1$d días que no han desaparecido o se han eliminado.</string>
-  <string name="InsightsDashboardFragment__start_a_conversation">Comenza un chat</string>
+  <string name="InsightsDashboardFragment__start_a_conversation">Comienza un chat</string>
   <string name="InsightsDashboardFragment__invite_your_contacts">Comienza a comunicarte de manera segura con las características de Signal que van más allá de SMS sin cifrar e invita contactos a chatear contigo con Signal.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Esta cifra se ha generado en este dispositivo y sólo tú puedes verla. No se envía a ningún servidor.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Mensajes cifrados</string>
@@ -1500,7 +1500,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">El bloqueo de registro ayuda a proteger tu número de teléfono de intentos de registro no autorizados. Esta característica se puede desactivar en cualquier momento en la configuración de privacidad de Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Bloqueo de registro</string>
   <string name="RegistrationLockDialog_enable">Activar</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">El PIN de bloqueo de registro debe tener al menos 4 dígitos.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">El PIN de bloqueo de registro debe tener al menos 4 dígitos.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Los dos PINs no coinciden.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Fallo al conectar con el servicio</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">¿Desactivar el PIN de bloqueo de registro?</string>
