--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -270,12 +270,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Varmennettu</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Profiilisi tiedot</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Profiilisi tiedot</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Virhe asetettaessa profiilikuvaa</string>
   <string name="CreateProfileActivity_problem_setting_profile">Virhe asetettaessa profiilia</string>
   <string name="CreateProfileActivity_profile_photo">Profiilikuva</string>
-  <string name="CreateProfileActivity_too_long">Liian pitkä</string>
-  <string name="CreateProfileActivity_profile_name">Profiilin nimi</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Liian pitkä</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profiilin nimi</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Aseta profiilisi</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profiilit ovat päästä päähän salattuja eikä Signal-palvelulla ole pääsyä näihin tietoihin.</string>
   <string name="CreateProfileActivity_set_avatar_description">Aseta kuvake</string>
@@ -551,16 +551,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Käyttämäsi versio Google Play Servicestä ei toimi kunnolla. Asenna Google Play Services uudelleen ja yritä uudestaan.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Profiilin nimi</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Yhteyshenkilöt ja muut käyttäjät tai ryhmät voivat nähdä profiilinimesi, kun aloitat keskustelun tai hyväksyt keskustelupyynnön.</string>
-  <string name="ProfileEditNameFragment_save">Tallenna</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profiilin nimi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Yhteyshenkilöt ja muut käyttäjät tai ryhmät voivat nähdä profiilinimesi, kun aloitat keskustelun tai hyväksyt keskustelupyynnön.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Tallenna</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profiili</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Profiilin nimi</string>
-  <string name="ProfileEditOverviewFragment_username">Käyttäjätunnus</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Luo profiilin nimi</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Luo käyttäjätunnus</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Yhteyshenkilöt ja muut käyttäjät tai ryhmät voivat nähdä Signal-profiilisi, kun aloitat keskustelun tai hyväksyt keskustelupyynnön. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Napauta tätä lukeaksesi lisää</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profiili</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profiilin nimi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Käyttäjätunnus</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Luo profiilin nimi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Luo käyttäjätunnus</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Yhteyshenkilöt ja muut käyttäjät tai ryhmät voivat nähdä Signal-profiilisi, kun aloitat keskustelun tai hyväksyt keskustelupyynnön. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Napauta tätä lukeaksesi lisää</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Arvostele tämä sovellus</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Jos pidät Signalista, voit auttaa meitä arvostelemalla sen.</string>
@@ -1059,10 +1059,10 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Jotta Signal voi lähettää mediatiedostoja ja ryhmäviestejä puhelinoperaattorisi kautta, täytyy MMS-asetusten olla määritelty. Tällä hetkellä nämä asetukset eivät ole saatavilla laitteessasi, mikä voi johtua laitteesi operaattorilukituksesta tai muista rajoittavista asetuksista.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Jotta voit lähettää mediatiedostoja ja ryhmäviestejä, napauta \"OK\" ja täydennä pyydetyt asetukset. Puhelinoperaattorisi MMS-asetukset yleensä löytyvät, kun haet Internetistä operaattorisi nimellä ja termillä \"APN\". Tämä asetusten säätö tarvitsee tehdä vain kerran.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Aseta myöhemmin</string>
-  <string name="profile_create_activity__finish">VALMIS</string>
-  <string name="profile_create_activity__who_can_see_this_information">Kuka voi nähdä nämä tiedot?</string>
-  <string name="profile_create_activity__your_name">Nimesi</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Aseta myöhemmin</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">VALMIS</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kuka voi nähdä nämä tiedot?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Nimesi</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Jaettu media</string>
   <!--recipient_preferences-->
@@ -1493,7 +1493,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Rekisteröinnin lukitus auttaa suojaamaan puhelinnumeroasi luvattomilta rekisteröintiyrityksiltä. Voit ottaa tämän ominaisuuden pois käytöstä milloin tahansa Signalin yksityisyysasetuksista.</string>
   <string name="RegistrationLockDialog_registration_lock">Rekisteröinnin lukitus</string>
   <string name="RegistrationLockDialog_enable">Ota käyttöön</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Rekisteröinnin lukituksen PIN-koodin tulee olla vähintään 4 numeron pituinen.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Rekisteröinnin lukituksen PIN-koodin tulee olla vähintään 4 numeron pituinen.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Syöttämäsi PIN-koodit eivät täsmää.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Virhe yhdistettäessä palveluun</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Otetaanko rekisteröinnin lukituksen PIN-koodi pois käytöstä?</string>
