--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -263,12 +263,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificado</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">A información do teu perfil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">A información do teu perfil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Erro ao establecer a fotografía do perfil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problemas ao establecer o perfil</string>
   <string name="CreateProfileActivity_profile_photo">Fotografía do perfil</string>
-  <string name="CreateProfileActivity_too_long">Moi longo</string>
-  <string name="CreateProfileActivity_profile_name">Nome do perfil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Moi longo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nome do perfil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Establece o teu perfil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Os perfís de Signal están cifrados de principio a fin e o servizo de Signal en ningún momento ten acceso a esta información.</string>
   <string name="CreateProfileActivity_set_avatar_description">Establecer avatar</string>
@@ -507,9 +507,9 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">A versión de Servizos de Google Play que tes instalada non funciona correctamente. Volve instalala e proba de novo.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_save">Gardar</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Gardar</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Perfil</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Perfil</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Valorar esta app</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se realmente che gusta esta aplicación, dedícalle, por favor, un intre a valorala.</string>
@@ -984,10 +984,10 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal require configurar as MMS para enviar mensaxes a grupos e multimedia a través dos datos do teu provedor. O teu dispositivo non proporciona esta información, o cal en ocasións acontece con dispositivos bloqueados ou con configuracións moi restritivas.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Para enviar ficheiros multimedia e mensaxes a grupos, toca Aceptar e completa a configuración solicitada. Os axustes das MMS do teu provedor xeralmente pódense atopar buscando polo seu APN. Só necesitas facelo unha vez.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Establecer máis tarde</string>
-  <string name="profile_create_activity__finish">REMATAR</string>
-  <string name="profile_create_activity__who_can_see_this_information">Quen pode ver esta información?</string>
-  <string name="profile_create_activity__your_name">O teu nome</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Establecer máis tarde</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">REMATAR</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Quen pode ver esta información?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">O teu nome</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Ficheiros multimedia compartidos</string>
   <!--recipient_preferences-->
@@ -1398,7 +1398,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">O bloqueo de rexistro protexe o teu número de teléfono de tentativas non autorizadas de rexistro. Esta funcionalidade pode ser desactivada en calquera momento nos axustes de privacidade.</string>
   <string name="RegistrationLockDialog_registration_lock">Bloqueo do rexistro</string>
   <string name="RegistrationLockDialog_enable">Activar</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">O PIN de bloqueo do rexistro debe ter cando menos 4 díxitos.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">O PIN de bloqueo do rexistro debe ter cando menos 4 díxitos.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Os dous PIN inseridos non coinciden.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Erro ao conectarse ao servizo</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Desactivar o PIN de bloqueo do rexistro?</string>
