--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -265,12 +265,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Potvrđeno</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Informacije vašeg profila</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Informacije vašeg profila</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Greška prilikom postavljanja profilne slike</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problem kod postavljanja profila</string>
   <string name="CreateProfileActivity_profile_photo">Profilna slika</string>
-  <string name="CreateProfileActivity_too_long">Predugo</string>
-  <string name="CreateProfileActivity_profile_name">Ime profila</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Predugo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Ime profila</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Postavite vaš profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profili su zaštićeni s kraja na kraj, te Signal servis nikada nema pristup tim informacijama.</string>
   <!--CustomDefaultPreference-->
@@ -510,9 +510,9 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Google Play Services intalirana inačica ne radi ispravno. Ponovno instalirajte Google Play Services i pokušajte ponovno.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_save">Spremi</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Spremi</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Ocijenite ovu aplikaciju</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ukoliko volite koristiti ovu aplikaciju, odvojite trenutak kako biste nam pomogli svojom ocjenom.</string>
@@ -982,10 +982,10 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal zahtjeva MMS postavke kako bi dostavio multimedijalne ili grupne poruke preko vašeg operatera. Vaš uređaj nije ove informacije učinio dostupnima, što se ponekad događa kod zaključanih uređaja ili drugih ograničenih postavki.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Kako biste slali multimedijalne i grupne poruke, pritisnite \'OK\' i popunite tražene postavke. MMS postavke za Vašeg operatera obično se mogu naći tražeći \'APN vašeg operatera\'. Ovo je potrebno učiniti samo jednom.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Postavi kasnije</string>
-  <string name="profile_create_activity__finish">ZAVRŠI</string>
-  <string name="profile_create_activity__who_can_see_this_information">Tko može vidjeti ove podatke?</string>
-  <string name="profile_create_activity__your_name">Vaše ime</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Postavi kasnije</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ZAVRŠI</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Tko može vidjeti ove podatke?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Vaše ime</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Dijeljeni mediji</string>
   <!--recipient_preferences-->
@@ -1381,7 +1381,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Registracijsko zaključavanje pomaže u zaštiti vašeg telefonskog broja od neovlaštenih pokušaja registracije. Ova značajka se u svakom trenutku može onemogućiti u vašim Signal postavkama privatnosti.</string>
   <string name="RegistrationLockDialog_registration_lock">Zaključavanje registracije</string>
   <string name="RegistrationLockDialog_enable">Omogući</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registracijski PIN za zaključavanje mora biti najmanje 4 broja.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registracijski PIN za zaključavanje mora biti najmanje 4 broja.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Dva PINa koja ste unijeli se ne poklapaju.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Greška prilikom povezivanja na servis</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Onemogućiti PIN registracijskog zaključavanja?</string>
