--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -271,12 +271,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Megerősítve</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Profilod adatai</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Profilod adatai</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Hiba történt a profilkép beállítása során</string>
   <string name="CreateProfileActivity_problem_setting_profile">Probléma profil beállításakor</string>
   <string name="CreateProfileActivity_profile_photo">Profilkép</string>
-  <string name="CreateProfileActivity_too_long">Túl hosszú</string>
-  <string name="CreateProfileActivity_profile_name">Profil név</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Túl hosszú</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profil név</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Profilod beállítása</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">A Signal profilok végponttól végpontig titkosítva vannak, így a Signal szolgáltatás sosem férhet hozzá ezekhez az adatokhoz.</string>
   <string name="CreateProfileActivity_set_avatar_description">Profilkép beállítása</string>
@@ -554,16 +554,16 @@
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Az általad használt Google Play Szolgáltatások nem működnek megfelelően.
 Kérlek telepítsd újra a Google Play Szolgáltatásokat, majd próbáld újra!</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Profilnév</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Profilnevedet kontaktjaidon kívül azok a felhasználok és csoportok is megtekinthetik, akikkel beszélgetést kezdeményezel, vagy akiktől elfogadsz ilyen meghívást.</string>
-  <string name="ProfileEditNameFragment_save">Mentés</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profilnév</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Profilnevedet kontaktjaidon kívül azok a felhasználok és csoportok is megtekinthetik, akikkel beszélgetést kezdeményezel, vagy akiktől elfogadsz ilyen meghívást.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Mentés</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Profilnév</string>
-  <string name="ProfileEditOverviewFragment_username">Felhasználónév</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Profilnév létrehozása</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Felhasználónév létrehozása</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Profilnevedet kontaktjaidon kívül azok a felhasználok és csoportok is megtekinthetik, akikkel beszélgetést kezdeményezel, vagy akiktől elfogadsz ilyen meghívást. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Koppints további információért</a></string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profilnév</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Felhasználónév</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Profilnév létrehozása</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Felhasználónév létrehozása</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Profilnevedet kontaktjaidon kívül azok a felhasználok és csoportok is megtekinthetik, akikkel beszélgetést kezdeményezel, vagy akiktől elfogadsz ilyen meghívást. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Koppints további információért</a></string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Értékeld az alkalmazást</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ha szívesen használod ezt az alkalmazást, akkor kérlek szánj rá egy percet, hogy segíts nekünk értékelésed leadásával.</string>
@@ -1068,10 +1068,10 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">A Signal-nak szüksége van az MMS beállításokra annak érdekében, hogy a média- és csoportüzeneteket mobilszolgáltatódon keresztül kézbesíthesse. A készüléked nem teszi ezt az információt elérhetővé, ami néha igaz a zárolt eszközökre, és egyéb jelentősen korlátozott konfigurációkra.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Média és csoport üzenetek küldéséhez koppints az \'OK\'-ra és hajtsd végre a kért beállításokat. A szolgáltatód MMS beállításai általában fellelhetőek egy \'szolgáltatód neve APN\' kereséssel. Ezt csak egyszer kell megtenned.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Beállítás később</string>
-  <string name="profile_create_activity__finish">BEFEJEZÉS</string>
-  <string name="profile_create_activity__who_can_see_this_information">Ki láthatja ezt az információt?</string>
-  <string name="profile_create_activity__your_name">Neved</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Beállítás később</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">BEFEJEZÉS</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Ki láthatja ezt az információt?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Neved</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Megosztott médiafájlok</string>
   <!--recipient_preferences-->
@@ -1500,7 +1500,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">A regisztrációs zár segít megvédeni a telefonszámodat a jogosulatlan regisztrációs próbálkozásoktól. Ez a funkció bármikor letiltható a Signal adatvédelmi beállításaiban.</string>
   <string name="RegistrationLockDialog_registration_lock">Regisztrációs zár</string>
   <string name="RegistrationLockDialog_enable">Engedélyezés</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">A regisztrációs zár PIN kódnak legalább 4 számjegyből kell állnia.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">A regisztrációs zár PIN kódnak legalább 4 számjegyből kell állnia.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">A két megadott PIN nem egyezik.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Hiba történt a szolgáltatáshoz történő csatlakozás során</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Letiltod a regisztrációs zár PIN kódot?</string>
