--- a/app/src/main/res/values-km/strings.xml
+++ b/app/src/main/res/values-km/strings.xml
@@ -256,12 +256,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">បានផ្ទៀងផ្ទាត់</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">ព័ត៌មានអំពីខ្លួនអ្នក</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">ព័ត៌មានអំពីខ្លួនអ្នក</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">ការកំណត់រូបថតប្រវត្តរូបមានបញ្ហា</string>
   <string name="CreateProfileActivity_problem_setting_profile">បញ្ហាក្នុងការកំណត់ប្រវត្តិរូប</string>
   <string name="CreateProfileActivity_profile_photo">រូបថតប្រវត្តិរូប</string>
-  <string name="CreateProfileActivity_too_long">វែងពេក</string>
-  <string name="CreateProfileActivity_profile_name">ឈ្មោះប្រវត្តិរូប</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">វែងពេក</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">ឈ្មោះប្រវត្តិរូប</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">បង្កើតប្រវត្តិរូបរបស់អ្នក</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">ប្រវត្តិរូប Signal ត្រូវបានអ៊ិនគ្រីបទាំងសងខាង និងសេវាកម្ម Signal មិនអាចចូលប្រើប្រាស់ព័ត៌មាននេះបានទេ។ </string>
   <string name="CreateProfileActivity_set_avatar_description">កំណត់រូបតំណាង</string>
@@ -530,16 +530,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">កំណែ Google Play Services ដែលបានដំឡើងមិនត្រឹមត្រូវទេ។ សូមដំឡើង Google Play Services សារជាថ្មី និងព្យាយាមម្តងទៀត។</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">ឈ្មោះប្រវត្តិរូប</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">ឈ្មោះប្រវត្តិរូបរបស់អ្នកអាចមើលឃើញដោយទំនាក់ទំនងរបស់អ្នក និងអ្នកប្រើ ឬក្រុមផ្សេងទៀត នៅពេលដែលអ្នកចាប់ផ្តើមការសន្ទនា ឬទទួលយកការស្នើសុំការសន្ទនា។</string>
-  <string name="ProfileEditNameFragment_save">រក្សាទុក</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">ឈ្មោះប្រវត្តិរូប</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">ឈ្មោះប្រវត្តិរូបរបស់អ្នកអាចមើលឃើញដោយទំនាក់ទំនងរបស់អ្នក និងអ្នកប្រើ ឬក្រុមផ្សេងទៀត នៅពេលដែលអ្នកចាប់ផ្តើមការសន្ទនា ឬទទួលយកការស្នើសុំការសន្ទនា។</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">រក្សាទុក</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">ប្រវត្តិរូប</string>
-  <string name="ProfileEditOverviewFragment_profile_name">ឈ្មោះប្រវត្តិរូប</string>
-  <string name="ProfileEditOverviewFragment_username">ឈ្មោះអ្នកប្រើប្រាស់</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">បង្កើតឈ្មោះប្រវត្តិរូបមួយ</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">បង្កើតឈ្មោះអ្នកប្រើប្រាស់</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">ប្រវត្តិរូប Signal របស់អ្នកអាចមើលឃើញដោយទំនាក់ទំនងរបស់អ្នក និងអ្នកប្រើ ឬក្រុមផ្សេងទៀត នៅពេលដែលអ្នកចាប់ផ្តើមការសន្ទនា ឬទទួលយកការស្នើសុំការសន្ទនា។ <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">ចុចទីនេះដើម្បីស្វែងយល់បន្ថែម</a>។</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">ប្រវត្តិរូប</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">ឈ្មោះប្រវត្តិរូប</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">ឈ្មោះអ្នកប្រើប្រាស់</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">បង្កើតឈ្មោះប្រវត្តិរូបមួយ</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">បង្កើតឈ្មោះអ្នកប្រើប្រាស់</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">ប្រវត្តិរូប Signal របស់អ្នកអាចមើលឃើញដោយទំនាក់ទំនងរបស់អ្នក និងអ្នកប្រើ ឬក្រុមផ្សេងទៀត នៅពេលដែលអ្នកចាប់ផ្តើមការសន្ទនា ឬទទួលយកការស្នើសុំការសន្ទនា។ <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">ចុចទីនេះដើម្បីស្វែងយល់បន្ថែម</a>។</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ដាក់ពិន្ទុកម្មវិធីនេះ</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">បើអ្នកចូលចិត្តប្រើប្រាស់កម្មវិធីនេះ សូមចំណាយពេលបន្តិច ដើម្បីជួយដាក់ពិន្ទុផង។</string>
@@ -1029,10 +1029,10 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages"> Signal ទាមទារការកំណត់MMS ដើម្បីបញ្ជូនព័ត៌មាន និងសារជាក្រុម តាមរយៈប្រតិបត្តិករបណ្តាញរបស់អ្នក។ ឧបករណ៍អ្នកមិនអាចបង្ហាញព័ត៌មានបាន ដោយសារឧបករណ៍អ្នកត្រូវបានជាប់សោ និងមិនអនុញ្ញាតឲ្យកែប្រែបាន។ </string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">ដើម្បីផ្ញើសារព័ត៌មាន និងសារជាក្រុម ចុច \'ព្រម\' និងបញ្ចប់ការកំណត់ស្នើសុំ។ ការកំណត់ MMS ដោយប្រតិបត្តិករ ជាទូទៅត្រូវបានកំណត់ដោយការស្វែងរក \'APN របស់ប្រតិបត្តិករអ្នក\'។ អ្នកនឹងត្រូវធ្វើដូចនេះតែម្តងទេ។</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">កំណត់ពេលក្រោយ</string>
-  <string name="profile_create_activity__finish">បញ្ចប់</string>
-  <string name="profile_create_activity__who_can_see_this_information">នរណាខ្លះអាចឃើញព័ត៌មាននេះ?</string>
-  <string name="profile_create_activity__your_name">ឈ្មោះរបស់អ្នក</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">កំណត់ពេលក្រោយ</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">បញ្ចប់</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">នរណាខ្លះអាចឃើញព័ត៌មាននេះ?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">ឈ្មោះរបស់អ្នក</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">ចែករំលែកព័ត៌មាន</string>
   <!--recipient_preferences-->
@@ -1461,7 +1461,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">ចាក់សោរការចុះឈ្មោះ ជួយការពារលេខទូរស័ព្ទអ្នក ពីការព្យយាមបន្លំការចុះឈ្មោះ។ មុខងារនេះ អាចបិទបានគ្រប់ពេល ក្នុងការកំណត់ឯកជនភាពរបស់ Signal</string>
   <string name="RegistrationLockDialog_registration_lock">ចាក់សោរការចុះឈ្មោះ</string>
   <string name="RegistrationLockDialog_enable">បើក</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">លេខ PIN សម្រាប់ចាក់សោរការចុះឈ្មោះ ត្រូវតែមានយ៉ាងតិច 4 ខ្ទង់។</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">លេខ PIN សម្រាប់ចាក់សោរការចុះឈ្មោះ ត្រូវតែមានយ៉ាងតិច 4 ខ្ទង់។</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">លេខ PIN ទាំងពីរដែលអ្នកបានបញ្ចូល មិនត្រូវគ្នា។</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">បញ្ហាក្នុងការភ្ជាប់ទៅសេវា</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">បិទលេខ PIN សម្រាប់ចាក់សោរការចុះឈ្មោះ?</string>
