--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -10,6 +10,7 @@
   <string name="AbstractNotificationBuilder_new_message">새 메시지</string>
   <!--AlbumThumbnailView-->
   <!--ApplicationMigrationActivity-->
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal 업데이트 중…</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">현재: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">암호 설정되지 않음</string>
@@ -57,6 +58,8 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal에 위치 정보를 첨부하려면 위치 권한이 필요하지만 현재 거부되어 있습니다. 앱 설정 메뉴에서 \"권한\"을 선택한 후 \"위치\" 항목을 허용하세요.</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal에 찍은 사진을 첨부하려면 카메라 권한이 필요하지만 현재 거부되어 있습니다. 앱 설정 메뉴에서 \"권한\"을 선택한 후 \"카메라\" 항목을 허용하세요.</string>
   <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">미디어 업로드 중…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">비디오 압축 중…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">오디오 재생 오류 발생</string>
   <!--BlockedContactsActivity-->
@@ -64,8 +67,8 @@
   <!--BucketedThreadMedia-->
   <string name="BucketedThreadMedia_Today">오늘</string>
   <string name="BucketedThreadMedia_Yesterday">어제</string>
-  <string name="BucketedThreadMedia_This_week">이번주</string>
-  <string name="BucketedThreadMedia_This_month">이번달</string>
+  <string name="BucketedThreadMedia_This_week">이번 주</string>
+  <string name="BucketedThreadMedia_This_month">이번 달</string>
   <string name="BucketedThreadMedia_Large">크게</string>
   <string name="BucketedThreadMedia_Small">작게</string>
   <!--CallScreen-->
@@ -153,7 +156,7 @@
   <string name="ConversationActivity_quick_camera_unavailable">카메라 사용할 수 없음</string>
   <string name="ConversationActivity_unable_to_record_audio">오디오 녹음할 수 없음</string>
   <string name="ConversationActivity_there_is_no_app_available_to_handle_this_link_on_your_device">작업을 처리할 수 있는 앱 없음</string>
-  <string name="ConversationActivity_to_send_audio_messages_allow_signal_access_to_your_microphone">음성 메시지를 보내기 위해서, Signal 이 마이크에 접근하 수 있게 허용하십시오.</string>
+  <string name="ConversationActivity_to_send_audio_messages_allow_signal_access_to_your_microphone">음성 메시지를 보내기 위해서, Signal이 마이크에 접근할 수 있게 허용하십시오.</string>
   <string name="ConversationActivity_signal_requires_the_microphone_permission_in_order_to_send_audio_messages">Signal이 오디오 메시지를 보내려면 마이크 권한이 필요하지만 현재 거부되어 있습니다. 앱 설정 메뉴에서 \"권한\"을 선택한 후 \"마이크\" 항목을 허용하세요.</string>
   <string name="ConversationActivity_to_call_s_signal_needs_access_to_your_microphone_and_camera">Signal에서 %s에게 전화하려면 마이크 및 카메라 권한이 필요합니다.</string>
   <string name="ConversationActivity_signal_needs_the_microphone_and_camera_permissions_in_order_to_call_s">Signal이 %s에게 전화하려면 마이크와 카메라 권한이 필요하지만 현재 거부되어 있습니다. 앱 설정 메뉴에서 \"권한\"을 선택한 후 \"마이크\" 및 \"카메라\" 항목을 허용하세요.</string>
@@ -201,6 +204,8 @@
   <string name="ConversationFragment_deleting_messages">메시지를 삭제 중…</string>
   <string name="ConversationFragment_quoted_message_not_found">원본 메시지를 찾을 수 없음</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">원본 메시지를 더 이상 이용할 수 없음</string>
+  <string name="ConversationFragment_failed_to_open_message">메시지 열기 실패</string>
+  <string name="ConversationFragment_you_already_viewed_this_message">이 메시지를 이미 읽음</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">브라우저 앱 없음</string>
   <!--ConversationListFragment-->
@@ -227,12 +232,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">검증됨</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">내 프로필</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">내 프로필</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">프로필 사진 설정 중 오류 발생</string>
   <string name="CreateProfileActivity_problem_setting_profile">프로필 설정 중 오류 발생</string>
   <string name="CreateProfileActivity_profile_photo">프로필 사진</string>
-  <string name="CreateProfileActivity_too_long">너무 깁니다</string>
-  <string name="CreateProfileActivity_profile_name">프로필 이름</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">너무 깁니다</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">프로필 이름</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">프로필을 설정하세요</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal 프로필은 단대단 암호화가 적용되며, Signal 서비스는 해당 정보에 접근할 수 없습니다.</string>
   <!--CustomDefaultPreference-->
@@ -457,7 +462,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">설치된 Google Play 서비스 버전은 제대로 작동하지 않습니다. Google Play 서비스를 재설치 하고 다시 시도해 주세요.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_save">저장</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">저장</string> -->
   <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">앱 평가</string>
@@ -902,10 +907,10 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">이동통신사를 통해 멀티미디어 및 그룹 메시지를 전송하기 위해 MMS 설정 정보가 필요합니다. 기기에서 이 정보가 제공되지 않습니다. 참고: SIM락이 걸려 있거나 다른 방법으로 제한된 기기에서는 가끔 그런 경우가 발생할 수 있습니다.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">멀티미디어 및 그룹 메시지를 보내려면 확인을 터치하여 한 번만 설정해야 합니다. 이동통신사의 MMS 설정 정보를 찾으려면 \'이동통신사 이름 APN\'을 검색하세요.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">나중에 설정</string>
-  <string name="profile_create_activity__finish">완료</string>
-  <string name="profile_create_activity__who_can_see_this_information">이 정보는 누가 볼 수 있나요?</string>
-  <string name="profile_create_activity__your_name">내 이름</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">나중에 설정</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">완료</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">이 정보는 누가 볼 수 있나요?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">내 이름</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">공유된 미디어</string>
   <!--recipient_preferences-->
@@ -1300,7 +1305,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">등록 잠금은 이 휴대전화 번호를 비인가 등록 시도에서 보호할 수 있습니다. 이 기능은 Signal 개인정보 보호 설정에서 언제든지 켜고 끌 수 있습니다.</string>
   <string name="RegistrationLockDialog_registration_lock">등록 잠금</string>
   <string name="RegistrationLockDialog_enable">켜기</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">등록 잠금 번호는 4글자 이상이어야 합니다.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">등록 잠금 번호는 4글자 이상이어야 합니다.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">입력한 두 번호가 일치하지 않습니다.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">서비스에 연결 중 오류 발생</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">등록 잠금 번호를 해제하시겠습니까?</string>
