--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -76,12 +76,14 @@
   <string name="BucketedThreadMedia_This_week">Šonedēļ</string>
   <string name="BucketedThreadMedia_This_month">Šomēnes</string>
   <string name="BucketedThreadMedia_Large">Liels</string>
+  <string name="BucketedThreadMedia_Medium">Medijs</string>
   <string name="BucketedThreadMedia_Small">Mazs</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Ienākošš zvans</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Neizdevās saglabāt attēlu.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_tap_for_photo_hold_for_video">Pieskarieties, lai iegūtu fotoattēlu, turiet, lai skatītu videoklipu</string>
   <string name="CameraXFragment_capture_description">Uzņemt</string>
   <string name="CameraXFragment_change_camera_description">Mainīt kameru</string>
   <string name="CameraXFragment_open_gallery_description">Atvērt galeriju</string>
@@ -102,6 +104,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Neizdevās atrast interneta pārlūku.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Mobilais zvans jau notiek.</string>
+  <string name="CommunicationActions_start_video_call">Sākt videozvanu?</string>
+  <string name="CommunicationActions_start_voice_call">Sākt audiozvanu?</string>
   <string name="CommunicationActions_cancel">Atcelt</string>
   <string name="CommunicationActions_call">Zvanīt</string>
   <!--ConfirmIdentityDialog-->
@@ -112,6 +116,8 @@
   <string name="ContactsCursorLoader_recent_chats">Nesenās sarunas</string>
   <string name="ContactsCursorLoader_contacts">Kontakti</string>
   <string name="ContactsCursorLoader_groups">Grupas</string>
+  <string name="ContactsCursorLoader_phone_number_search">Tālruņa numura meklēšana</string>
+  <string name="ContactsCursorLoader_username_search">Lietotājvārda meklēšana</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Ziņa %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal Zvans %s</string>
@@ -181,6 +187,9 @@
   <string name="ConversationActivity_to_capture_photos_and_video_allow_signal_access_to_the_camera">Lai uzņemtu fotogrāfijas un video, ļaujiet Signal piekļūt pie kameras.</string>
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Lai uzņemtu fotogrāfijas vai video, Signal nepieciešama atļauja pieejai pie kameras, bet tā ir liegta. Ejiet uz lietotnes iestatījumiem, izvēlieties „Atļaujas“ un ieslēdziet „Kamera“.</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Lai uzņemtu fotogrāfijas vai video, Signal nepieciešama atļauja pieejai pie kameras</string>
+  <string name="ConversationActivity_enable_the_microphone_permission_to_capture_videos_with_sound">Dodiet mikrofona atļauju, lai video tiktu uzņemts ar skaņu.</string>
+  <string name="ConversationActivity_signal_needs_the_recording_permissions_to_capture_video">Signālam ir vajadzīgas mikrofona atļaujas video ierakstīšanai, taču tās tika liegtas. Lūdzu, dodieties uz lietotnes iestatījumiem, izvēlieties “Atļaujas” un iespējojiet “Mikrofons” un “Kamera”.</string>
+  <string name="ConversationActivity_signal_needs_recording_permissions_to_capture_video">Signālam nepieciešamas mikrofona atļaujas, lai ierakstītu video.</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
   <string name="ConversationActivity_signal_cannot_sent_sms_mms_messages_because_it_is_not_your_default_sms_app">Signal nevar sūtīt SMS/MMS ziņas, jo tā nav Jūsu noklusējuma SMS lietotne. Vai Jūs vēlētos to izmainīt Android iestatījumos?</string>
   <string name="ConversationActivity_yes">Jā</string>
@@ -237,6 +246,10 @@
   <string name="ConversationFragment_quoted_message_not_found">Oriģinālā ziņa netika atrasta</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Oriģinālā ziņa vairs nav pieejama</string>
   <string name="ConversationFragment_failed_to_open_message">Neizdevās atvērt ziņu</string>
+  <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Lai ātri atbildētu, uz jebkura ziņas varat vilkt pa labi</string>
+  <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Uz jebkuras ziņas varat vilkt pa kreisi, lai ātri atbildētu</string>
+  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Izejošie vienreizējā-skata multivides faili pēc nosūtīšanas tiek automātiski noņemti</string>
+  <string name="ConversationFragment_you_already_viewed_this_message">Jūs jau skatījāties šo ziņu</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Jūsu ierīcē nav uzstādīts pārlūks.</string>
   <!--ConversationListFragment-->
@@ -271,12 +284,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Pārbaudīts</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Jūsu profila info</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Jūsu profila info</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Kļūda iestatot profila attēlu</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problēma iestatot profilu</string>
   <string name="CreateProfileActivity_profile_photo">Profila attēls</string>
-  <string name="CreateProfileActivity_too_long">Pārāk garš</string>
-  <string name="CreateProfileActivity_profile_name">Profila Nosaukums</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Pārāk garš</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profila Nosaukums</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Iestatiet savu profilu</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profili ir šifrēti (end-to-end) tā, ka Signal servisam nav pieeja šij informācijai. </string>
   <string name="CreateProfileActivity_set_avatar_description">Iestatīt ikonu</string>
@@ -308,6 +321,7 @@
   <string name="DeviceListItem_last_active_s">Pēdējo reizi aktīvs %s</string>
   <string name="DeviceListItem_today">Šodien</string>
   <!--DocumentView-->
+  <string name="DocumentView_unnamed_file">Bezvārda fails</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimizē priekš trūkstošajiem Google Play Services</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Šī ierīce neatbalsta Play Services, Pieskaries, lai atspējotu systēmas baterijas optimizāciju, kas traucē Signal saņemt ziņas, kad tas ir neaktīvs.</string>
@@ -337,6 +351,8 @@
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Papildu saišu priekšskatījumi tagad tiek atbalstīti dažās populārākajās interneta vietnēs.</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Jūs variet ieslēgt vai izslēgt šo jebkurā laikā savos Signal iestatījumos (Privātums -&gt; Sūtīt saišu prekšskatījumus)</string>
   <string name="ExperienceUpgradeActivity_got_it">Sapratu</string>
+  <string name="ExperienceUpgradeActivity_introducing_stickers">Iepazīstinām ar uzlīmēm</string>
+  <string name="ExperienceUpgradeActivity_lets_go">Aiziet</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Ziņas ielāde…</string>
   <!--GcmRefreshJob-->
@@ -411,7 +427,9 @@
   <string name="MmsDownloader_error_reading_mms_settings">Neizdevās nolasīt mobilo pakalpojumu sniedzēja MMS uzstādījumus</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multivide</string>
+  <string name="MediaOverviewActivity_Files">Faili</string>
   <string name="MediaOverviewActivity_Audio">Audio</string>
+  <string name="MediaOverviewActivity_All">Visi</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Dzēš</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Dzēš ziņas…</string>
   <string name="MediaOverviewActivity_Select_all">Izvēlēties visu</string>
@@ -517,7 +535,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Jūsu Google Play Services instalētā versija nefunkcionē pareizi. Lūdzu pārinstalējiet Google Play Services un mēģiniet vēlreiz.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_save">Saglabāt</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Saglabāt</string> -->
   <!--ProfileEditOverviewFragment-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Novērtējiet šo lietotni</string>
@@ -830,6 +848,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Signal ir nepieciešama piekļuve kontaktiem, lai parādītu Jūsu kontaktus, bet tā ir neatgriezeniski noraidīta. Lūdzu ejiet uz lietotnes iestatījumiem, izvēlieties „Atļaujas“ un ieslēdziet „Kontakti“. </string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Kļūda ielādējot kontaktus, pārbaudiet savu interneta savienojumu.</string>
+  <string name="ContactSelectionListFragment_okay">Oki-doki</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Nav bloķētu kontaktu</string>
   <!--contact_selection_list_fragment-->
@@ -994,10 +1013,10 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal ir nepieciešami MMS iestatījumi, lai nogādātu mēdija un grupu ziņas caur operatora tīklu. Jūsu ierīce nesniedz šādu informāciju, kas ir reizēm taisnība operatoru slēgtām ierīcēm un citām liedzošām konfigurācijām.  </string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Lai nosūtītu multivides un grupas ziņas, spiediet \'OK\' un izpildiet pieprasītos uzstādījumus. Jūsu mobilo sakaru operatora MMS iestatījumus parasti var atrast, meklējot “jūsu pakalpojumu sniedzēja APN”. Jums tas būs jādara tikai vienreiz.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Iestatīt vēlāk</string>
-  <string name="profile_create_activity__finish">PABEIGT</string>
-  <string name="profile_create_activity__who_can_see_this_information">Kas var redzēt šo informāciju?</string>
-  <string name="profile_create_activity__your_name">Jūsu vārds</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Iestatīt vēlāk</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">PABEIGT</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kas var redzēt šo informāciju?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Jūsu vārds</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Koplietota multivide</string>
   <!--recipient_preferences-->
@@ -1174,6 +1193,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="preferences_chats__when_roaming">Izmantojot viesabonēšanau</string>
   <string name="preferences_chats__media_auto_download">Multivides automātiskā lejupielāde</string>
   <string name="preferences_chats__message_trimming">Ziņu apgriešana</string>
+  <string name="preferences_storage__files">Faili</string>
   <string name="preferences_storage__audio">Audio</string>
   <string name="preferences_advanced__use_system_emoji">Lietot sistēmas emoji</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Izslēgt Signāla emoji (smaidiņus)</string>
@@ -1394,7 +1414,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Reģistrācijas Bloķēšana palīdz aizsargāt tālruņa numuru pret nesankcionētiem reģistrācijas mēģinājumiem. Šo līdzekli Signal privātuma iestatījumos var atspējot jebkurā laikā</string>
   <string name="RegistrationLockDialog_registration_lock">Reģistrācijas Bloķēšana</string>
   <string name="RegistrationLockDialog_enable">Iespējot</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Reģistrācijas Bloķēšanas PIN jābūt vismaz 4 cipariem.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Reģistrācijas Bloķēšanas PIN jābūt vismaz 4 cipariem.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Divi ievadītie PIN nesakrīt.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Kļūda, savienojoties ar pakalpojumu</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Vai atspējot Reģistrācijas Bloķēšanas PIN?</string>
