--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -251,12 +251,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Disahkan</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Butiran profil anda</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Butiran profil anda</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Ralat menetapkan foto profil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Masalah menetapkan profil</string>
   <string name="CreateProfileActivity_profile_photo">Foto profil</string>
-  <string name="CreateProfileActivity_too_long">Terlalu panjang</string>
-  <string name="CreateProfileActivity_profile_name">Nama profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Terlalu panjang</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nama profil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Tetapkan profil anda</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profil Signal adalah penyulitan hujung ke hujung dan perkhidmatan Signal tidak mempunyai akses kepada maklumat ini.</string>
   <string name="CreateProfileActivity_set_avatar_description">Tetapkan avatar</string>
@@ -495,10 +495,10 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Perkhidmatan Google Play yang dipasang oleh anda tidak berfungsi dengan betul. Sila pasang semula Perkhidmatan Google Play dan cuba lagi.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_save">Simpan</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Simpan</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_username">Nama Pengguna</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nama Pengguna</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Nilai aplikasi ini</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Jika anda suka menggunakan aplikasi ini, sila luangkan masa untuk menilaikannya.</string>
@@ -956,10 +956,10 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal memerlukan tetapan MMS untuk menghantar media dan mesej kumpulan melalu pembawa wayarles anda. Peranti anda tidak membuat maklumat ini tersedia, yang kadang-kadang berlaku untuk peranti terkunci dan konfigurasi sekatan yang lain.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Untuk menghantar media dan mesej kumpulann, ketik \'OK\' dan lengkapkan tetapan yang diminta. Tetapan MMS untuk pembawa anda secara umumnya boleh ddicari dengan mencari \'APN pembawa anda\'. Anda hanya perlu melakukan ini sekali sahaja.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Tetapkan kemudian</string>
-  <string name="profile_create_activity__finish">SELESAI</string>
-  <string name="profile_create_activity__who_can_see_this_information">Siapakah yang boleh melihat maklumat ini?</string>
-  <string name="profile_create_activity__your_name">Nama anda</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Tetapkan kemudian</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">SELESAI</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Siapakah yang boleh melihat maklumat ini?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Nama anda</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Media yang dikongsi</string>
   <!--recipient_preferences-->
@@ -1363,7 +1363,7 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Kunci Pendaftaran membantu melindungi nombor telefon anda dari percubaan pendaftaran yang tidak dibenarkan. Ciri ini boleh dinyahdayakan pada bila-bila masa dalam tetapan privasi Signal anda</string>
   <string name="RegistrationLockDialog_registration_lock">Kunci Pendaftaran</string>
   <string name="RegistrationLockDialog_enable">Dayakan</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN Kunci Pendaftaran mesti mempunyai sekurang-kurangnya 4 digit.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN Kunci Pendaftaran mesti mempunyai sekurang-kurangnya 4 digit.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Dua PIN yang anda masukkan tidak sepadan.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Ralat menyambung ke perkhidmatan</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Nyahdayakan PIN Kunci Pendaftaran?</string>
