--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -238,6 +238,8 @@
   <string name="ConversationFragment_failed_to_open_message">Kunne ikke åpne meldingen</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Du kan sveipe til høyre på meldinger for å svare raskt</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Du kan sveipe til venstre på meldinger for å svare raskt</string>
+  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Utgående visningsmediefiler blir automatisk fjernet etter at de er sendt</string>
+  <string name="ConversationFragment_you_already_viewed_this_message">Du har allerede sett denne meldingen</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Denne enheten har ingen nettleser installert.</string>
   <!--ConversationListFragment-->
@@ -268,12 +270,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verifisert</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Din profilinfo</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Din profilinfo</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Feil ved largring av profilbilde</string>
   <string name="CreateProfileActivity_problem_setting_profile">Feil ved lagring av profil</string>
   <string name="CreateProfileActivity_profile_photo">Profilbilde</string>
-  <string name="CreateProfileActivity_too_long">For lang</string>
-  <string name="CreateProfileActivity_profile_name">Profilnavn</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">For lang</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profilnavn</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Sett opp din profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profiler er kryptert fra ende til ende, og Signal-tjenesten har aldri tilgang til denne informasjonen.</string>
   <string name="CreateProfileActivity_set_avatar_description">Sett avatar</string>
@@ -335,6 +337,7 @@
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Valgfrie linkforhåndsvisninger støttes nå for noen av de mest populære nettstedene på Internett.</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Du kan deaktivere eller aktivere denne funksjonen når som helst i innstillingene for Signal (Personvern &gt; Send linkforhåndsvisninger).</string>
   <string name="ExperienceUpgradeActivity_got_it">Ålreit</string>
+  <string name="ExperienceUpgradeActivity_introducing_stickers">Presenterer klistremerker</string>
   <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Hvorfor bruke ord når du kan bruke klistremerker?</string>
   <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Hvorfor bruke ord når du kan bruke klistremerker? Trykk på dette ikonet på tastaturet ditt:</string>
   <!--GcmBroadcastReceiver-->
@@ -481,6 +484,7 @@
     <item quantity="other">Du kan ikke dele mer enn %d filer.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Velg mottakere</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Trykk her for å få denne meldingen til å forsvinne etter at den er sett.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Alle medier</string>
   <!--MessageRecord-->
@@ -547,16 +551,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versjonen av Google Play Tjenester som er installert på denne enheten fungerer ikke skikkelig. Installer Google Play Tjenester på nytt og prøv igjen.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Profil navn</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Profilnavnet ditt kan sees av kontaktene dine og av andre brukere eller grupper når du starter en samtale eller godtar en samtaleforespørsel.</string>
-  <string name="ProfileEditNameFragment_save">Lagre</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profil navn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Profilnavnet ditt kan sees av kontaktene dine og av andre brukere eller grupper når du starter en samtale eller godtar en samtaleforespørsel.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Lagre</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Profil navn</string>
-  <string name="ProfileEditOverviewFragment_username">Brukernavn</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Opprett et profilnavn</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Opprett et brukernavn</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Signal-profilen din kan sees av kontaktene dine og av andre brukere eller grupper når du setter i gang en samtale eller godtar en samtaleforespørsel. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Trykk her for å lære mer</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profil navn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Brukernavn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Opprett et profilnavn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Opprett et brukernavn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Signal-profilen din kan sees av kontaktene dine og av andre brukere eller grupper når du setter i gang en samtale eller godtar en samtaleforespørsel. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Trykk her for å lære mer</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Vurder dette programmet</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Hvis du liker dette programmet, vil vi gjerne at du hjelper oss ved å gi din vurdering.</string>
@@ -634,6 +638,7 @@ skrev inn (%s) er ugyldig.</string>
   <string name="RegistrationActivity_call">Ring</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_view_photo">Se bilde</string>
+  <string name="RevealableMessageView_view_video">Se video</string>
   <string name="RevealableMessageView_viewed">Sett</string>
   <string name="RevealableMessageView_media">Media</string>
   <!--ScribbleActivity-->
@@ -1049,10 +1054,10 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal krever MMS-oppsett for å levere medier og gruppemeldinger via mobilnett. Enheten din gjør ikke denne informasjonen tilgjengelig, som kan skje for låste enheter og andre restriktive konfigurasjoner.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Trykk «OK» og følg anvisninger hvis du vil sende medie- og gruppemeldinger. Du finner vanligvis MMS-oppsettet for operatøren din ved å søke etter «din operatør APN». Du trenger bare å gjøre dette én gang.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Legg til senere</string>
-  <string name="profile_create_activity__finish">FERDIG</string>
-  <string name="profile_create_activity__who_can_see_this_information">Hvem kan se denne informasjonen?</string>
-  <string name="profile_create_activity__your_name">Ditt navn</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Legg til senere</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">FERDIG</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Hvem kan se denne informasjonen?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Ditt navn</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Delte medier</string>
   <!--recipient_preferences-->
@@ -1483,7 +1488,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Registreringslås beskytter telefonnummeret ditt mot uautoriserte registreringsforsøk. Denne funksjonen kan deaktiveres når som helst i Signal-personverninnstillingene</string>
   <string name="RegistrationLockDialog_registration_lock">Registreringslås</string>
   <string name="RegistrationLockDialog_enable">Aktiver</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registrerings-PIN-koden må bestå av minst 4 sifre.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registrerings-PIN-koden må bestå av minst 4 sifre.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">PIN-kodene du skrev inn var ikke like.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Feil ved å koble til tjenesten</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Vil du slå av registreringslåsen?</string>
