--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -284,12 +284,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Verificat</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Detalii profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Detalii profil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Eroare la setarea pozei de profil</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problemă la setarea profilului</string>
   <string name="CreateProfileActivity_profile_photo">Poză profil</string>
-  <string name="CreateProfileActivity_too_long">Prea lung</string>
-  <string name="CreateProfileActivity_profile_name">Nume profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Prea lung</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Nume profil</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Configurează-ți profilul</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profilurile Signal sunt criptate integral, iar serviciul Signal nu are niciodată acces la aceste informații.</string>
   <string name="CreateProfileActivity_set_avatar_description">Setează avatar</string>
@@ -573,16 +573,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Această versiune de Google Play Services pe care o ai instalată nu funcționează corect. Te rog reinstalează Google Play Services și încearcă din nou.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Nume profil</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Numele profilului dvs. poate fi văzut de contactele dvs. și de alți utilizatori sau grupuri atunci când inițiați o conversație sau acceptați o solicitare de conversație.</string>
-  <string name="ProfileEditNameFragment_save">Salvează</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Nume profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Numele profilului dvs. poate fi văzut de contactele dvs. și de alți utilizatori sau grupuri atunci când inițiați o conversație sau acceptați o solicitare de conversație.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Salvează</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Nume profil</string>
-  <string name="ProfileEditOverviewFragment_username">Nume utilizator</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Creați un nume de profil</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Creați un nume de utilizator</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Profilul Signal poate fi văzut de contactele dvs. și de alți utilizatori sau grupuri atunci când inițiați o conversație sau acceptați o solicitare de conversație. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Apăsați pentru a afla mai multe</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Nume profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Nume utilizator</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Creați un nume de profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Creați un nume de utilizator</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Profilul Signal poate fi văzut de contactele dvs. și de alți utilizatori sau grupuri atunci când inițiați o conversație sau acceptați o solicitare de conversație. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Apăsați pentru a afla mai multe</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Evaluați aplicaţia</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Dacă vă place aplicaţia, vă rog ajutați-ne cu o evaluare.</string>
@@ -1091,10 +1091,10 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal are nevoie de setările MMS pentru a trimite media și mesaje pentru grupuri prin operatorul wireless. Acest dispozitiv nu oferă această informație, lucru care se poate întâmpla uneori pentru dispozitive blocate sau alte configurații restrictive.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Pentru a putea trimite mesaje multimedia cât și mesaje într-un grup, apăsați \'OK\' și completați setările solicitate. Setările MMS pentru operatorul tău pot fi găsite cautând după \'APN operatorul tău\'. Această operațiune este necesară o singură dată.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Setează mai târziu</string>
-  <string name="profile_create_activity__finish">TERMINARE</string>
-  <string name="profile_create_activity__who_can_see_this_information">Cine poate vedea această informație?</string>
-  <string name="profile_create_activity__your_name">Numele tău</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Setează mai târziu</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">TERMINARE</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Cine poate vedea această informație?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Numele tău</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Fișiere media distribuite</string>
   <!--recipient_preferences-->
@@ -1528,7 +1528,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Blocarea înregistrării ajută la protejarea numărului tău de telefon împotriva încercărilor neautorizate de înregistrare. Această facilitate poate fi dezactivată oricând în setările de confidențialitate ale Signal</string>
   <string name="RegistrationLockDialog_registration_lock">Blocarea înregistrării</string>
   <string name="RegistrationLockDialog_enable">Activat</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN-ul de blocare al înregistrării trebuie să aibă cel puțin 4 cifre.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN-ul de blocare al înregistrării trebuie să aibă cel puțin 4 cifre.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Cele 2 PIN-uri introduse nu se potrivesc.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Eroare de conectare la serviciu</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Dezactivare PIN Blocare Înregistrare?</string>
