--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -298,12 +298,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Overený</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Váš profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Váš profil</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Chyba pri nastavení profilovej fotky</string>
   <string name="CreateProfileActivity_problem_setting_profile">Chyba pri nastavení profilu</string>
   <string name="CreateProfileActivity_profile_photo">Profilová fotka</string>
-  <string name="CreateProfileActivity_too_long">Príliš dlhé</string>
-  <string name="CreateProfileActivity_profile_name">Profilové meno</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Príliš dlhé</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profilové meno</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Nastavte si svoj profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profily Signal sú end-to-end šifrované a služba Signal nikdy nemá prístup k týmto informáciám.</string>
   <string name="CreateProfileActivity_set_avatar_description">Nastaviť avatar</string>
@@ -593,16 +593,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Verzia aplikácie Google Play Services ktorú máte nainštalovanú nefunguje správne. Prosím preinštalujte Google Play Services a skúste znova.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Názov profilu</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Váš názov profilu môžu vidieť vaše kontakty a ďalší používatelia alebo skupiny, keď začnete konverzáciu alebo prijemte žiadosť o konverzáciu.</string>
-  <string name="ProfileEditNameFragment_save">Uložiť</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Názov profilu</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Váš názov profilu môžu vidieť vaše kontakty a ďalší používatelia alebo skupiny, keď začnete konverzáciu alebo prijemte žiadosť o konverzáciu.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Uložiť</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Názov profilu</string>
-  <string name="ProfileEditOverviewFragment_username">Používateľské meno</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Vytvoriť názov profilu</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Vytvoriť používateľské meno</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Keď začnete konverzáciu alebo prijmete žiadosť o konverzáciu, váš profil v Signali môžu vidieť vaše kontakty a ďalší používatelia alebo skupiny. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Ťuknutím na toto miesto sa dozviete viac</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Názov profilu</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Používateľské meno</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Vytvoriť názov profilu</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Vytvoriť používateľské meno</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Keď začnete konverzáciu alebo prijmete žiadosť o konverzáciu, váš profil v Signali môžu vidieť vaše kontakty a ďalší používatelia alebo skupiny. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Ťuknutím na toto miesto sa dozviete viac</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Ohodnotiť túto aplikáciu</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ak sa vám táto aplikácia páči, nájdite si chvíľu a pomôžte nám tým, že ju ohodnotíte.</string>
@@ -1124,10 +1124,10 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal vyžaduje nastavenia MMS na doručenie médií a skupinových správ cez vášho poskytovateľa pripojenia. Vaše zariadenie neposkytuje tieto informácie, čo občas spôsobujú uzamknuté zariadenia alebo iné obmedzenia v nastaveniach.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Pre odoslanie médií a skupinových správ stlačte OK, a dokončite príslušné nastavenia. MMS nastavenia vášho poskytovateľa sa väčšinov dajú nájsť vyhľadaním \"váš poskytovateľ APN\". Toto nastavenie musíte urobiť len raz.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Nastaviť neskôr</string>
-  <string name="profile_create_activity__finish">DOKONČIŤ</string>
-  <string name="profile_create_activity__who_can_see_this_information">Kto môže vidieť túto informáciu?</string>
-  <string name="profile_create_activity__your_name">Vaše meno</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Nastaviť neskôr</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">DOKONČIŤ</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kto môže vidieť túto informáciu?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Vaše meno</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Zdieľané médiá</string>
   <!--recipient_preferences-->
@@ -1562,7 +1562,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Registračný zámok pomáha chrániť Vaše telefónne číslo pred neautorizovanou registráciou. Táto funkcia sa dá vypnúť kedykoľvek v nastaveniach súkromia Signalu.</string>
   <string name="RegistrationLockDialog_registration_lock">Registračný zámok</string>
   <string name="RegistrationLockDialog_enable">Zapnúť</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registračný zámok musí obsahovať aspoň 4 čísla.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Registračný zámok musí obsahovať aspoň 4 čísla.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">PINy ktoré ste zadali sa nezhodujú.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Chyba pri pripájaní k službe</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Vypnúť PIN registračného zámku?</string>
