--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -298,12 +298,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Potrjeno</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Vaša predstavitvena fotografija</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Vaša predstavitvena fotografija</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Napaka pri pošiljanju predstavitvene fotografije</string>
   <string name="CreateProfileActivity_problem_setting_profile">Napaka pri nastavljanju profila</string>
   <string name="CreateProfileActivity_profile_photo">Predstavitvena fotografija</string>
-  <string name="CreateProfileActivity_too_long">Ime profila je predolgo</string>
-  <string name="CreateProfileActivity_profile_name">Ime profila</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Ime profila je predolgo</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Ime profila</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Nastavite svoj profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Profili v aplikaciji Signal so šifrirani od konca do konca, storitev Signal do njihove vsebine nima dostopa.</string>
   <string name="CreateProfileActivity_set_avatar_description">Določi avatar</string>
@@ -593,16 +593,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Različica programa Google Play Services, ki jo imate nameščeno, ne deluje, kot bi morala. Prosimo, ponovno namestite Google Play Services in poskusite znova.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Naziv profila</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Naziv vašega profila je viden vašim stikom ter drugim uporabnikom in skupinam kadar začnete pogovor z njimi ali sprejmete njihovo povabilo k pogovoru.</string>
-  <string name="ProfileEditNameFragment_save">Shrani</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Naziv profila</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Naziv vašega profila je viden vašim stikom ter drugim uporabnikom in skupinam kadar začnete pogovor z njimi ali sprejmete njihovo povabilo k pogovoru.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Shrani</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Naziv profila</string>
-  <string name="ProfileEditOverviewFragment_username">Uporabniško ime</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Stvaritev imena profila</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Stvaritev uporabniškega imena</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Vaš Pofil Signal je viden vašim stikom ter drugim uporabnikom in skupinam kadar začnete pogovor z njimi ali sprejmete njihovo povabilo k pogovoru. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Za več informacij tapnite tukaj</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Naziv profila</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Uporabniško ime</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Stvaritev imena profila</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Stvaritev uporabniškega imena</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Vaš Pofil Signal je viden vašim stikom ter drugim uporabnikom in skupinam kadar začnete pogovor z njimi ali sprejmete njihovo povabilo k pogovoru. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Za več informacij tapnite tukaj</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Oceni to aplikacijo</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Če se vam zdi aplikacija Signal koristna in uporabna, vas prosimo, da si vzamete nekaj trenutkov in jo ocenite.</string>
@@ -1116,10 +1116,10 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Za pošiljanje vešpredsatvnostnih in skupinskih sporočil potrebuje aplikacija Signal nastavitve MMS vašega mobilnega operaterja. Teh podatkov ni mogoče pridobiti iz vaše naprave, kar je značilno za zaklenjene naprave in druge omejene konfiguracije. </string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Za pošiljanje večpredstavnostnih in skupinskih sporočil tapnite \'OK\' in vnesite potrebne podatke. Nastavitve MMS za vašega operaterja lahko najverjetneje najdete z iskanjem po spletu. Podatke morate vnesti samo enkrat.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Nastavi kasneje</string>
-  <string name="profile_create_activity__finish">DOKONČAJ</string>
-  <string name="profile_create_activity__who_can_see_this_information">Kdo lahko vidi vse to?</string>
-  <string name="profile_create_activity__your_name">Vaše ime</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Nastavi kasneje</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">DOKONČAJ</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Kdo lahko vidi vse to?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Vaše ime</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Deljene datoteke</string>
   <!--recipient_preferences-->
@@ -1554,7 +1554,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Zaklep prijave na strežnik vas ščiti pred nepooblaščeno prijavo tretje osebe z vašo telefonsko številko. Storitev lahko kadarkoli izkopite v meniju \"Zasebnost\" v nastavitvah aplikacije Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Zaklep prijave na strežnik</string>
   <string name="RegistrationLockDialog_enable">Vklopi</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Koda PIN za prijavo v omrežje mora vsebovati vsaj 4 števke.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Koda PIN za prijavo v omrežje mora vsebovati vsaj 4 števke.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Kodi PIN, ki ste ju vnesli, se ne ujemata.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Napaka pri povezavi do storitve</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Izklopim PIN za prijavo v omrežje?</string>
