--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -238,7 +238,7 @@
   <string name="ConversationFragment_failed_to_open_message">Det gick inte att öppna meddelandet</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Du kan dra åt höger på ett meddelande för att snabbt svara</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Du kan dra åt vänster på ett meddelande för att snabbt svara</string>
-  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Filer för utgående engångsmedia raderas automatiskt efter att de har skickats</string>
+  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Filer för utgående visa-en-gång media raderas automatiskt efter att de har skickats</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Du har redan sett det här meddelandet</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Det finns ingen webbläsare installerad på din enhet.</string>
@@ -270,12 +270,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Bekräftat</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Din profilinfo</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Din profilinfo</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Det gick inte att ställa in profilbild</string>
   <string name="CreateProfileActivity_problem_setting_profile">Gick inte välja profil</string>
   <string name="CreateProfileActivity_profile_photo">Profilbild</string>
-  <string name="CreateProfileActivity_too_long">För långt</string>
-  <string name="CreateProfileActivity_profile_name">Profilnamn</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">För långt</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profilnamn</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Ställ in din profil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profiler är end-to-end-krypterade och Signal-tjänsten har aldrig tillgång till denna information.</string>
   <string name="CreateProfileActivity_set_avatar_description">Ställ in avatar</string>
@@ -551,16 +551,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versionen av Google Play-tjänster du har installerat fungerar inte korrekt. Installera om Google Play-tjänster och försök igen.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Profilnamn</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Ditt profilnamn kan ses av dina kontakter och av andra användare eller grupper när du initierar en konversation eller accepterar en konversationsbegäran.</string>
-  <string name="ProfileEditNameFragment_save">Spara</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profilnamn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Ditt profilnamn kan ses av dina kontakter och av andra användare eller grupper när du initierar en konversation eller accepterar en konversationsbegäran.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Spara</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Profilnamn</string>
-  <string name="ProfileEditOverviewFragment_username">Användarnamn</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Skapa ett profilnamn</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Skapa ett användarnamn</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Din Signal-profil kan ses av dina kontakter och av andra användare eller grupper när du initierar en konversation eller accepterar en konversationsbegäran. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tryck här för att lära dig mer</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profilnamn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Användarnamn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Skapa ett profilnamn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Skapa ett användarnamn</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Din Signal-profil kan ses av dina kontakter och av andra användare eller grupper när du initierar en konversation eller accepterar en konversationsbegäran. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tryck här för att lära dig mer</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Betygsätt denna app</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Om du gillar denna app kan du hjälpa oss genom att betygsätta den.</string>
@@ -700,9 +700,9 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="ThreadRecord_missed_call">Missat samtal</string>
   <string name="ThreadRecord_media_message">Mediameddelande</string>
   <string name="ThreadRecord_sticker">Klistermärke</string>
-  <string name="ThreadRecord_view_once_photo">Visa-engångsfoto</string>
-  <string name="ThreadRecord_view_once_video">Visa-engångsvideo</string>
-  <string name="ThreadRecord_view_once_media">Visa-engångsmedia</string>
+  <string name="ThreadRecord_view_once_photo">Visa-en-gång foto</string>
+  <string name="ThreadRecord_view_once_video">Visa-en-gång video</string>
+  <string name="ThreadRecord_view_once_media">Visa-en-gång media</string>
   <string name="ThreadRecord_s_is_on_signal">%s finns på Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Försvinnande meddelanden inaktiverat</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Tiden för försvinnande meddelanden inställd till %s</string>
@@ -793,8 +793,8 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="MessageNotifier_mark_read">Läst</string>
   <string name="MessageNotifier_media_message">Mediameddelande</string>
   <string name="MessageNotifier_sticker">Klistermärke</string>
-  <string name="MessageNotifier_view_once_photo">Visa-engångsfoto</string>
-  <string name="MessageNotifier_view_once_video">Visa-engångsvideo</string>
+  <string name="MessageNotifier_view_once_photo">Visa-en-gång foto</string>
+  <string name="MessageNotifier_view_once_video">Visa-en-gång video</string>
   <string name="MessageNotifier_reply">Svara</string>
   <string name="MessageNotifier_signal_message">Signal-meddelande</string>
   <string name="MessageNotifier_unsecured_sms">Osäkert SMS</string>
@@ -940,7 +940,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="QuoteView_audio">Ljud</string>
   <string name="QuoteView_video">Filmer</string>
   <string name="QuoteView_photo">Foto</string>
-  <string name="QuoteView_view_once_media">Visa-engångsmedia</string>
+  <string name="QuoteView_view_once_media">Visa-en-gång media</string>
   <string name="QuoteView_sticker">Klistermärke</string>
   <string name="QuoteView_document">Dokument</string>
   <string name="QuoteView_you">Du</string>
@@ -1059,10 +1059,10 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal kräver MMS-inställningar för att leverera medie- och gruppmeddelanden via din mobiloperatör. Din enhet gör inte den här informationen tillgänglig, vilket ibland stämmer för låsta enheter och andra restriktiva konfigurationer.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">För att skicka medie- och gruppmeddelande, tryck \'OK\' och fyll i de begärda inställningarna. MMS-inställningarna för din operatör kan generellt hittas genom att söka efter \'din operatör APN\'. Du behöver bara göra det här en gång.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Välj senare</string>
-  <string name="profile_create_activity__finish">SLUTFÖR</string>
-  <string name="profile_create_activity__who_can_see_this_information">Vem kan se denna information?</string>
-  <string name="profile_create_activity__your_name">Ditt namn</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Välj senare</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">SLUTFÖR</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Vem kan se denna information?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Ditt namn</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Delade media</string>
   <!--recipient_preferences-->
@@ -1493,7 +1493,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Registreringslås hjälper till att skydda ditt mobilnummer från obehöriga registreringsförsök. Denna funktion kan när som helst stängas av under Signals integritetsskyddinställningar.</string>
   <string name="RegistrationLockDialog_registration_lock">Registreringslås</string>
   <string name="RegistrationLockDialog_enable">Aktivera</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN-koden för registreringslåset måste vara minst 4-siffrigt.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">PIN-koden för registreringslåset måste vara minst 4-siffrigt.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">De två PIN-koderna du skrev in matchade inte.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Fel vid anslutning till tjänsten</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Stäng av PIN-kod för registreringslås?</string>
