--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -272,12 +272,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">ధృవీకరించబడింది</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">మీ రూప సమాచారం</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">మీ రూప సమాచారం</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">రూపచిత్రం సెట్ చేయడంలో లోపం</string>
   <string name="CreateProfileActivity_problem_setting_profile">రూపాన్ని సెట్ చేయడంలో సమస్య</string>
   <string name="CreateProfileActivity_profile_photo">రూపచిత్రం </string>
-  <string name="CreateProfileActivity_too_long">చాలా పొడవు</string>
-  <string name="CreateProfileActivity_profile_name">ఖాతాదారుని పేరు</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">చాలా పొడవు</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">ఖాతాదారుని పేరు</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">మీ రూపంను సెటప్ చేయండి</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal రూపం ఎండ్-టు-ఎండ్ గుప్తీకరించబడ్డాయి మరియు Signal సేవకు ఈ సమాచారానికి ప్రాప్యత లేదు.</string>
   <string name="CreateProfileActivity_set_avatar_description">అవతార్ సెట్ చేయండి</string>
@@ -359,8 +359,7 @@
   <string name="GroupCreateActivity_actionbar_edit_title">సమూహాన్ని మార్చు</string>
   <string name="GroupCreateActivity_group_name_hint">సమూహం పేరు</string>
   <string name="GroupCreateActivity_actionbar_mms_title">కొత్త ఎమ్మెమ్మెస్ సమూహం</string>
-  <string name="GroupCreateActivity_contacts_dont_support_push">మీరు ఎంపిక చేసి Signal వర్గములకు మద్దత్తు లేని పరిచయం,కాబట్టి ఈ సమూహ ఎంఎంఎస్ ఉంటుంది.
-</string>
+  <string name="GroupCreateActivity_contacts_dont_support_push">మీరు ఎంపిక చేసి Signal వర్గములకు మద్దత్తు లేని పరిచయం,కాబట్టి ఈ సమూహ ఎంఎంఎస్ ఉంటుంది.</string>
   <string name="GroupCreateActivity_youre_not_registered_for_signal">మీరు Signal సందెసాలకు మరియు చరవానీ పిలుపులకు నమొదు చెసుకొలేదు,అందువల్ల Signal సముదాయాలు నిలిపివెయడమైనది.దయ ఉంచి సెట్టింగ్సులో నమూదు చెసుకొనుటకు ప్రయత్నించి ఉన్నత స్తితికి చేరుకొగలరు.</string>
   <string name="GroupCreateActivity_contacts_no_members">మీకు మీ సమూహంలొ కనీసం ఒక వ్యక్తి అవసరం!</string>
   <string name="GroupCreateActivity_contacts_invalid_number">మీ సమూహంలొ ఉన్న ఒకరి నంబరు సరిగ్గా చదవడానికి వీలు కావడం లేదు . దయ చేసి దానిని సరి చేయండి లేదా ఆ సంప్రదించే నంబరును తీసివేసి మరల ప్రయత్నించండి.</string>
@@ -436,7 +435,7 @@
   <string name="MediaOverviewActivity_collecting_attachments">జోడింపులను సేకరిస్తోంది …</string>
   <string name="MediaOverviewActivity_Sort_by">ఆమరిక</string>
   <string name="MediaOverviewActivity_Newest">సరికొత్త</string>
-  <string name="MediaOverviewActivity_Oldest">Oldest</string>
+  <string name="MediaOverviewActivity_Oldest">పాతది </string>
   <string name="MediaOverviewActivity_Storage_used">నిల్వ ఉపయోగించబడింది</string>
   <string name="MediaOverviewActivity_All_storage_use">అన్ని నిల్వ ఉపయోగం</string>
   <string name="MediaOverviewActivity_Grid_view_description">సమాంతరరేఖాచట్ర దృశ్యము</string>
@@ -554,16 +553,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">గూగుల్ ఫ్లే సేవలు ఒక్క వివరణం సరిగ్గ పని చెయ్యటంలేదు. దయచేసి  గూగుల్ ఫ్లే సేవలను మరల నెలకొల్పండి.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">ఖాతాదారుని పేరు</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">మీరు సంభాషణను ప్రారంభించినప్పుడు లేదా సంభాషణ అభ్యర్థనను అంగీకరించినప్పుడు మీ ప్రొఫైల్ పేరును మీ పరిచయాలు మరియు ఇతర వినియోగదారులు లేదా సమూహాలు చూడవచ్చు.</string>
-  <string name="ProfileEditNameFragment_save">భద్రపరుచు</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">ఖాతాదారుని పేరు</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">మీరు సంభాషణను ప్రారంభించినప్పుడు లేదా సంభాషణ అభ్యర్థనను అంగీకరించినప్పుడు మీ ప్రొఫైల్ పేరును మీ పరిచయాలు మరియు ఇతర వినియోగదారులు లేదా సమూహాలు చూడవచ్చు.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">భద్రపరుచు</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">రూపం</string>
-  <string name="ProfileEditOverviewFragment_profile_name">ఖాతాదారుని పేరు</string>
-  <string name="ProfileEditOverviewFragment_username">వినియోగదారుడు </string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">ప్రొఫైల్ పేరును సృష్టించండి</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">ఒక వాడుక పేరు సృష్టించు</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">మీరు సంభాషణను ప్రారంభించినప్పుడు లేదా సంభాషణ అభ్యర్థనను అంగీకరించినప్పుడు మీ పరిచయాలు మరియు ఇతర వినియోగదారులు లేదా సమూహాలు మీ Signal ప్రొఫైల్ చూడవచ్చు.<a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">మరింత తెలుసుకోవడానికి ఇక్కడ నొక్కండి</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">రూపం</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">ఖాతాదారుని పేరు</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">వినియోగదారుడు </string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">ప్రొఫైల్ పేరును సృష్టించండి</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">ఒక వాడుక పేరు సృష్టించు</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">మీరు సంభాషణను ప్రారంభించినప్పుడు లేదా సంభాషణ అభ్యర్థనను అంగీకరించినప్పుడు మీ పరిచయాలు మరియు ఇతర వినియోగదారులు లేదా సమూహాలు మీ Signal ప్రొఫైల్ చూడవచ్చు.<a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">మరింత తెలుసుకోవడానికి ఇక్కడ నొక్కండి</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ఈ అప్లికేషన్ ని రేట్ చెయ్యండి</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">ఈ కార్యక్షేత్రం నచ్చినచొ,దయచేసి కొంత సమయము వెచ్చించి దినిని విలువ కట్టండి.</string>
@@ -1055,10 +1054,10 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal మీ వైర్లెస్ క్యారియర్ ద్వారా మీడియా మరియు గుంపు సందేశాలు బట్వాడా ఎంఎంఎస్ సెట్టింగులు అవసరం. మీ పరికరం లాక్ పరికరాలు మరియు ఇతర మితమైన ఆకృతీకరణలు కోసం అప్పుడప్పుడు నిజం ఈ సమాచారాన్ని అందుబాటులో, ఉండవని.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">మీడియా మరియు గుంపు సందేశాలు పంపేందుకు, \'సరే\' నొక్కండి మరియు అభ్యర్థించిన సెట్టింగులను పూర్తి. మీ క్యారియర్ ఎంఎంఎస్ సెట్టింగులను సాధారణంగా \'మీ క్యారియర్ APN\' శోధించడం ద్వారా గుర్తించవచ్చు. మీరు ఒకసారి ఈ చెయ్యాల్సి ఉంటుంది.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">తర్వాత సెట్ చేయండి</string>
-  <string name="profile_create_activity__finish">ముగించు</string>
-  <string name="profile_create_activity__who_can_see_this_information">ఈ సమాచారాన్ని ఎవరు చూడగలరు?</string>
-  <string name="profile_create_activity__your_name">మీ పేరు</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">తర్వాత సెట్ చేయండి</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">ముగించు</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">ఈ సమాచారాన్ని ఎవరు చూడగలరు?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">మీ పేరు</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">భాగస్వామ్యం చేయబడిన మీడియా</string>
   <!--recipient_preferences-->
@@ -1489,7 +1488,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">నమోదు లాక్ అనధికార నమోదు ప్రయత్నాల నుండి మీ ఫోన్ నంబర్ను రక్షించడంలో సహాయపడుతుంది. మీ Signal గోప్యతా సెట్టింగ్ల్లో ఎప్పుడైనా ఈ లక్షణం నిలిపివేయబడుతుంది</string>
   <string name="RegistrationLockDialog_registration_lock">నమోదు లాక్</string>
   <string name="RegistrationLockDialog_enable">ప్రారంభించు</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">నమోదు లాక్ పిన్ తప్పనిసరిగా కనీసం 4 అంకెలు ఉండాలి.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">నమోదు లాక్ పిన్ తప్పనిసరిగా కనీసం 4 అంకెలు ఉండాలి.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">మీరు నమోదు చేసిన రెండు PIN లు సరిపోలేదు.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">సేవకు కనెక్ట్ చేయడంలో లోపం</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">నమోదు లాక్ పిన్ను నిలిపివేయాలా?</string>
