--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -213,12 +213,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">ตรวจยืนยันแล้ว</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">ข้อมูลโปรไฟล์ของคุณ</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">ข้อมูลโปรไฟล์ของคุณ</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">การตั้งค่ารูปโปรไฟล์ผิดพลาด</string>
   <string name="CreateProfileActivity_problem_setting_profile">ปัญหาการตั้งค่าโปรไฟล์</string>
   <string name="CreateProfileActivity_profile_photo">รูปโปรไฟล์</string>
-  <string name="CreateProfileActivity_too_long">ยาวเกินไป</string>
-  <string name="CreateProfileActivity_profile_name">ชื่อโปรไฟล์</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">ยาวเกินไป</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">ชื่อโปรไฟล์</string> -->
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">ใช้ค่าที่กำหนดเอง: %s</string>
   <string name="CustomDefaultPreference_using_default">ใช้ค่าเริ่มต้น: %s</string>
@@ -420,9 +420,9 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">เวอร์ชันของ Google Play Services ที่คุณมีอยู่ทำงานไม่ถูกต้อง โปรดติดตั้ง Google Play Services ใหม่และลองอีกครั้ง</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_save">บันทึก</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">บันทึก</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">โปรไฟล์</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">โปรไฟล์</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ให้คะแนนแอปนี้</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">ถ้าคุณชอบแอปนี้ โปรดสละเวลาให้คะแนนพวกเราสักนิด</string>
@@ -836,10 +836,10 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal ต้องการการตั้งค่า MMS เพื่อจะส่งสื่อและข้อความกลุ่มผ่านผู้ให้บริการเครือข่ายไร้สายของคุณ อุปกรณ์ของคุณไม่ได้ให้ข้อมูลนี้ กรณีนี้เกิดขึ้นได้สำหรับอุปกรณ์ที่ถูกล็อกหรืออุปกรณ์ที่ถูกจำกัดการใช้งานในรูปแบบอื่น</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">เพื่อจะส่งสื่อและข้อความกลุ่ม ให้แตะ \'ตกลง\' และตั้งค่าตามที่ร้องขอ การตั้งค่า MMS สำหรับผู้ให้บริการของคุณ สามารถหาได้โดยการค้นคำว่า \'APN ผู้ให้บริการของคุณ\' การตั้งค่านี้คุณต้องทำเพียงแค่ครั้งเดียว</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">ตั้งค่าภายหลัง</string>
-  <string name="profile_create_activity__finish">เสร็จสิ้น</string>
-  <string name="profile_create_activity__who_can_see_this_information">ใครเห็นข้อมูลนี้ได้บ้าง</string>
-  <string name="profile_create_activity__your_name">ชื่อของคุณ</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">ตั้งค่าภายหลัง</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">เสร็จสิ้น</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">ใครเห็นข้อมูลนี้ได้บ้าง</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">ชื่อของคุณ</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">สื่อที่ถูกแบ่งปัน</string>
   <!--recipient_preferences-->
@@ -1218,7 +1218,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">ล็อกการลงทะเบียนช่วยป้องกันหมายเลขโทรศัพท์ของคุณจากความพยายามลงทะเบียนที่ไม่ได้รับอนุญาต คุณสามารถปิดใช้งานคุณสมบัตินี้ได้ทุกเมื่อที่การตั้งค่าความเป็นส่วนตัวใน Signal ของคุณ</string>
   <string name="RegistrationLockDialog_registration_lock">ล็อกการลงทะเบียน</string>
   <string name="RegistrationLockDialog_enable">เปิดใช้งาน</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">รหัส PIN ล็อกการลงทะเบียนจะต้องเป็นตัวเลข 4 หลัก</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">รหัส PIN ล็อกการลงทะเบียนจะต้องเป็นตัวเลข 4 หลัก</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">รหัส PIN ทั้งสองที่คุณใช้นั้นไม่ตรงกัน</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">เกิดข้อผิดพลาดในการเชื่อมต่อกับบริการ</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">ปิดใช้งานรหัส PIN ล็อกการลงทะเบียนหรือไม่</string>
