--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -238,6 +238,7 @@
   <string name="ConversationFragment_failed_to_open_message">İleti açılamadı</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Herhangi bir iletiyi hızlıca yanıtlamak için sağa kaydırabilirsiniz</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Herhangi bir iletiyi hızlıca yanıtlamak için sola kaydırabilirsiniz</string>
+  <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Gönderilen tek görümlük içerik dosyaları gönderim tamamlandıktan sonra kendiliğinden silinir</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Bu iletiyi zaten görüntülediniz</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Cihazınıza yüklü tarayıcı bulunmamaktadır.</string>
@@ -269,12 +270,12 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Doğrulandı</string>
   <!--CreateProfileActivity-->
-  <string name="CreateProfileActivity_your_profile_info">Profil bilgileriniz</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_your_profile_info">Profil bilgileriniz</string> -->
   <string name="CreateProfileActivity_error_setting_profile_photo">Profil fotoğrafı kaydedilirken hata</string>
   <string name="CreateProfileActivity_problem_setting_profile">Profil ayarlanırken hata</string>
   <string name="CreateProfileActivity_profile_photo">Profil fotoğrafı</string>
-  <string name="CreateProfileActivity_too_long">Çok uzun</string>
-  <string name="CreateProfileActivity_profile_name">Profil Adı</string>
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_too_long">Çok uzun</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="CreateProfileActivity_profile_name">Profil Adı</string> -->
   <string name="CreateProfileActivity_set_up_your_profile">Profilinizi ayarlayın</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal profilleri uçtan uca şifrelidir ve Signal hizmeti asla bu bilgiye erişime sahip olmaz.</string>
   <string name="CreateProfileActivity_set_avatar_description">Avatar seçin</string>
@@ -474,7 +475,7 @@
   <string name="MediaSendActivity_add_a_caption">Bir başlık ekleyin…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Boyut sınırını aştığı için bir öğe kaldırıldı.</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera kullanılamıyor.</string>
-  <string name="MediaSendActivity_message_to_s">%s kişisine mesaj</string>
+  <string name="MediaSendActivity_message_to_s">%s kişisine ileti</string>
   <string name="MediaSendActivity_message">İleti</string>
   <string name="MediaSendActivity_select_recipients">Alıcıları seçin</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal\'in kişilerinizi gösterebilmek için erişime ihtiyacı var.</string>
@@ -551,16 +552,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Kurulu Google Play Hizmetleri sürümü doğru çalışmıyor. Lütfen Google Play Hizmetleri\'ni tekrar yükleyin ve yeniden deneyin.</string>
   <!--ProfileEditNameFragment-->
-  <string name="ProfileEditNameFragment_profile_name">Profil ismi</string>
-  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Bir görüşme başlattığınızda veya bir konuşma isteğini kabul ettiğinizde profil adınız kişileriniz ve diğer kullanıcılar veya gruplar tarafından görülebilir.</string>
-  <string name="ProfileEditNameFragment_save">Kaydet</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_profile_name">Profil ismi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Bir görüşme başlattığınızda veya bir konuşma isteğini kabul ettiğinizde profil adınız kişileriniz ve diğer kullanıcılar veya gruplar tarafından görülebilir.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditNameFragment_save">Kaydet</string> -->
   <!--ProfileEditOverviewFragment-->
-  <string name="ProfileEditOverviewFragment_profile">Profil</string>
-  <string name="ProfileEditOverviewFragment_profile_name">Profil ismi</string>
-  <string name="ProfileEditOverviewFragment_username">Kullanıcı adı</string>
-  <string name="ProfileEditOverviewFragment_create_a_profile_name">Bir profil ismi oluşturun</string>
-  <string name="ProfileEditOverviewFragment_create_a_username">Bir kullanıcı adı oluşturun</string>
-  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Bir görüşme başlattığınızda veya bir konuşma isteğini kabul ettiğinizde Signal Profiliniz kişileriniz ve diğer kullanıcılar veya gruplar tarafından görülebilir. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Dahasını öğrenmek için buraya dokunun</a>.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile">Profil</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_profile_name">Profil ismi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_username">Kullanıcı adı</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_profile_name">Bir profil ismi oluşturun</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_create_a_username">Bir kullanıcı adı oluşturun</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Bir görüşme başlattığınızda veya bir konuşma isteğini kabul ettiğinizde Signal Profiliniz kişileriniz ve diğer kullanıcılar veya gruplar tarafından görülebilir. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Dahasını öğrenmek için buraya dokunun</a>.</string> -->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bu uygulamaya puan verin</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Bu uygulamayı kullanmaktan hoşlanıyorsanız, lütfen bir dakikanızı ayırıp puan vererek bize yardımcı olun.</string>
@@ -684,7 +685,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="StickerManagementAdapter_stickers_you_received">Aldığınız Çıkartmalar</string>
   <string name="StickerManagementAdapter_signal_artist_series">Signal Tarafından</string>
   <string name="StickerManagementAdapter_no_stickers_installed">Yüklü çıkartma yok</string>
-  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Gelen mesajlardan aldığınız çıkartmalar burada gözükecektir</string>
+  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Gelen iletilerden aldığınız çıkartmalar burada gözükecektir</string>
   <string name="StickerManagementAdapter_untitled">İsimsiz</string>
   <string name="StickerManagementAdapter_unknown">Bilinmeyen</string>
   <!--StickerPackPreviewActivity-->
@@ -714,7 +715,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">%s ile güvenlik numaranız değişti.</string>
   <string name="ThreadRecord_you_marked_verified">Doğrulanmış olarak işaretlediniz.</string>
   <string name="ThreadRecord_you_marked_unverified">Doğrulanmamış olarak işaretlediniz.</string>
-  <string name="ThreadRecord_message_could_not_be_processed">Mesaj işlenemedi</string>
+  <string name="ThreadRecord_message_could_not_be_processed">İleti işlenemedi</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal güncellemesi</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal\'in yeni sürümü mevcut, güncellemek için dokunun</string>
@@ -802,7 +803,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="MessageNotifier_reply">Cevapla</string>
   <string name="MessageNotifier_signal_message">Signal İletisi</string>
   <string name="MessageNotifier_unsecured_sms">Şifresiz SMS</string>
-  <string name="MessageNotifier_you_may_have_new_messages">Yeni mesajlarınız olabilir</string>
+  <string name="MessageNotifier_you_may_have_new_messages">Yeni iletileriniz olabilir</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Yakın zamandaki bildirimler için Signal\'i açın.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kişi</string>
@@ -1063,10 +1064,10 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal içerik ve grup iletilerini kablosuz operatörünüz aracılığıyla taşıyabilmesi için MMS ayarlarının yapılmasını gerektirir. Cihazınız bu bilgiyi sağlamamaktadır. Bu durum bazen kilitli veya diğer kısıtlı yapılandırılmış cihazlar için geçerli olabilmektedir.</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">İçerik veya grup iletileri gönderebilmek için \'Tamam\' seçeneğine dokunup istenen ayarları tamamlayınız. Operatörünüzün MMS ayarları genellikle \'operatörünüz MMS\' araştırılarak bulunabilir. Bunu bir kez yapmanız gerekecektir.</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Sonra ayarla</string>
-  <string name="profile_create_activity__finish">BİTİR</string>
-  <string name="profile_create_activity__who_can_see_this_information">Bu bilgiyi kimler görebilir?</string>
-  <string name="profile_create_activity__your_name">Adınız</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__set_later">Sonra ayarla</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__finish">BİTİR</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__who_can_see_this_information">Bu bilgiyi kimler görebilir?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="profile_create_activity__your_name">Adınız</string> -->
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Paylaşılan içerik</string>
   <!--recipient_preferences-->
@@ -1394,7 +1395,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="Insights__percent">%</string>
   <string name="Insights__title">İçgörüler</string>
   <string name="InsightsDashboardFragment__title">İçgörüler</string>
-  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Signal Protokolü geçtiğimiz %2$d gündeki mesajlarınızın %%%1$d kadarını otomatik olarak korudu. Signal kullanıcıları arasındaki sohbetler her zaman uçtan uca şifrelidir.</string>
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Signal Protokolü geçtiğimiz %2$d gündeki iletilerinizin %%%1$d kadarını otomatik olarak korudu. Signal kullanıcıları arasındaki sohbetler her zaman uçtan uca şifrelidir.</string>
   <string name="InsightsDashboardFragment__boost_your_signal">Signal\'i güçlendir</string>
   <string name="InsightsDashboardFragment__not_enough_data">Yetersiz veri</string>
   <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">İçgörü yüzdeniz son %1$d gün içerisinde kaybolmamış veya silinmemiş giden iletilere göre hesaplanır.</string>
@@ -1405,7 +1406,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="InsightsDashboardFragment__cancel">İptal</string>
   <string name="InsightsDashboardFragment__send">Gönder</string>
   <string name="InsightsModalFragment__title">Karşınızda İçgörüler</string>
-  <string name="InsightsModalFragment__description">Mesajlarınızın ne kadarının güvenle gönderildiğini öğrenin ve Signal yüzdenizi arttırmak için yeni kişileri davet edin.</string>
+  <string name="InsightsModalFragment__description">İletilerinizin ne kadarının güvenle gönderildiğini öğrenin ve Signal yüzdenizi arttırmak için yeni kişileri davet edin.</string>
   <string name="InsightsModalFragment__view_insights">İçgörüleri Görüntüle</string>
   <string name="FirstInviteReminder__title">Signal\'e davet et</string>
   <string name="FirstInviteReminder__description">Gönderilen şifreli iletilerinizi %%%1$d oranında arttırabilirsiniz</string>
@@ -1497,7 +1498,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Kaydolma Kilidi PIN\'iniz numaranızı izinsiz kaydolma denemelerinden korur. Bu özelliği istediğiniz zaman Signal\'in gizlilik ayarlarından devre dışı bırakabilirsiniz</string>
   <string name="RegistrationLockDialog_registration_lock">Kaydolma Kilidi</string>
   <string name="RegistrationLockDialog_enable">Etkinleştir</string>
-  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Kaydolma Kilidi PIN\'iniz en az 4 rakam içermelidir.</string>
+  <!-- Removed by excludeNonTranslatables <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Kaydolma Kilidi PIN\'iniz en az 4 rakam içermelidir.</string> -->
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Girmiş olduğunuz PIN\'ler uyuşmuyor.</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Hizmete bağlanırken hata oluştu</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Kaydolma Kilidi PIN\'ini devre dışı bırak?</string>
